--- a/source/localisation/hedgehog_l_english.yml
+++ b/source/localisation/hedgehog_l_english.yml
@@ -78,7 +78,7 @@
  legal_basis:0 "法的基盤"
  national_identity:0 "国家の独自性"
  mechanic_enable_settled_mechanics_yes:1 "開発度を部族領に定着可能"
- mechanic_enable_tribal_grazing_no:0 "荒廃によってもはや牧草地ではない"
+ mechanic_enable_tribal_grazing_no:0 "牧草地が荒廃を引き起こさなくなる"
  MIGRATORY_TRIBE_CULTURE_CONV:0 "§R移住可能部族は文化を変更できません。§!"
  vassal_overlord_title:0 "宗主国"
  cb_native_american_tribal_feud_desc:0 "隣国から部族領を奪うことができます。"
