--- a/source/localisation/origins_l_english.yml
+++ b/source/localisation/origins_l_english.yml
@@ -643,7 +643,7 @@
  estate_church_one_faith_one_culture:0 "宗教文化"
  estate_church_one_faith_one_culture_desc:0 "社会の統一は、[Root.GetClergyName]が精神的な事柄を手中に収めるだけでなく、領内の文化的、社会的問題に対して重要な役割をも担うことで初めて達成できる。"
  estate_church_one_faith_one_culture_gta:0 "§Y[Root.Religion.GetName]§!で§Y[Root.Culture.GetGroupName]§!文化グループまたは§Y受容文化§!の領有州はすべて、§Y「宗教社会」§!を獲得し、以下の効果を得ます：\n州の不穏度：§G-1.00§!\n州の税補正：§G+10.0%§!\n州の生産効率：§G+10.0%§!\n州の人的資源補正：§G+10.0%§!"
- estate_church_one_faith_one_culture_gtb:2 "§Y[Root.Culture.GetGroupName]§!文化グループまたは§Y受容文化§!ではない領有州はすべて、§Y「異端文化」§!を獲得し、以下の効果を得ます：\n州の不穏度：§R+3.00§!\n州の文化転向コスト：§G -10.0%§!"
+ estate_church_one_faith_one_culture_gtb:2 "§Y[Root.Culture.GetGroupName]§!文化グループではない、又は§Y受容文化§!ではない領有州はすべて、§Y「異端文化」§!を獲得し、以下の効果を得ます：\n州の不穏度：§R+3.00§!\n州の文化転向コスト：§G -10.0%§!"
  estate_church_one_faith_one_culture_rta:0 "補正「§Y宗教社会§!」が、州の文化が§Y受容文化§!または§Y[Root.Culture.GetGroupName]§!文化グループで、宗教が§Y[Root.Religion.GetName]§!の全州から取り除かれます。"
  estate_church_one_faith_one_culture_rtb:0 "補正「§Y異端文化§!」が、州の文化が§Y受容文化§!または§Y[Root.Culture.GetGroupName]§!文化グループである州を除く全州から取り除かれます。"
  estate_dhimmi_guarantee_of_traditions:0 "保証された因習"
@@ -1135,8 +1135,8 @@
  selectable_mission_trigger_tt:0 "§Y分岐ミッション§!として完了することはできません。"
  son_religious_triggers_tt:0 "\n§Y[Root.GetName]§!が§Y宗教§!ルートを選択した場合、本ミッションの完了には以下の条件の達成が必要です："
  son_tolerance_triggers_tt:0 "\n§Y[Root.GetName]§!が§Y寛容§!ルートを選択した場合、本ミッションの完了には以下の条件の達成が必要です："
- son_religious_effects_tt:0 "\n§Y[Root.GetName]§!が§Y宗教§!ルートを選択した場合、以下の効果をえます："
- son_tolerance_effects_tt:0 "\n§Y[Root.GetName]§!が§Y寛容§!ルートを選択した場合、以下の効果をえます："
+ son_religious_effects_tt:0 "\n§Y[Root.GetName]§!が§Y宗教§!ルートを選択した場合、以下の効果が得られます："
+ son_tolerance_effects_tt:0 "\n§Y[Root.GetName]§!が§Y寛容§!ルートを選択した場合、以下の効果が得られます："
  kon_develop_country_title:0 "[Root.GetName]の発展"
  kon_develop_country_desc:0 "我が[Root.GovernmentName]は、今にも偉大さを手にする所だ。しかし、これを達成するためには、さらなる人とそれを支えるインフラが必要だ。[1170.GetCapitalName]及びその周辺を発展させるべきだろう。"
  kon_colonize_coast_title:0 "ンジングの源泉"
