--- a/source/localisation/red_queen_text_l_english.yml
+++ b/source/localisation/red_queen_text_l_english.yml
@@ -695,8 +695,8 @@
  dlc110_reason_new_music:0 "§YOrigins Expansion§!は新しい楽曲を追加します。"
  dlc110_reason_new_music_reason:1 "\n選択した地域の国々に新しい楽曲が追加されるため、このDLCを推奨します。"
  DLC_dlc115_TOOLTIP_INSTANT:0 "Lions of the North"
- DLC_dlc115_TOOLTIP_DELAYED:0 "- スカンディナヴィアとバルト諸国の新しいミッションツリー\n- スカンディナヴィアとバルト諸国の新しい独自の政府改革\n- スカンディナヴィアとバルト諸国の新しい特別な階級特権\n- 新しい特殊ユニット、スウェーデンとフィンランドのカロリアンおよびポーランド・リトアニアの有翼重騎兵\n- スカンディナヴィアとバルト諸国の新しいユニットモデル\n- スカンディナヴィアとバルト諸国の新しい6つの音楽"
- LANDING_dlc115_TEXT:0 "主な要素：\n- スカンディナヴィアとバルト諸国の新しいミッションツリー\n- スカンディナヴィアとバルト諸国の新しい独自の政府改革\n- スカンディナヴィアとバルト諸国の新しい特別な階級特権\n- 新しい特殊ユニット、スウェーデンとフィンランドのカロリアンおよびポーランド・リトアニアの有翼重騎兵\n- スカンディナヴィアとバルト諸国の新しいユニットモデル\n- スカンディナヴィアとバルト諸国の新しい6つの音楽"
+ DLC_dlc115_TOOLTIP_DELAYED:0 "- スカンディナヴィアとバルト諸国の新しいミッションツリー\n- スカンディナヴィアとバルト諸国の新しい独自の政府改革\n- スカンディナヴィアとバルト諸国の新しい特別な階級特権\n- 新しい特殊ユニット、スウェーデンとフィンランドのカロラインおよびポーランド・リトアニアの有翼重騎兵\n- スカンディナヴィアとバルト諸国の新しいユニットモデル\n- スカンディナヴィアとバルト諸国の新しい6つの音楽"
+ LANDING_dlc115_TEXT:0 "主な要素：\n- スカンディナヴィアとバルト諸国の新しいミッションツリー\n- スカンディナヴィアとバルト諸国の新しい独自の政府改革\n- スカンディナヴィアとバルト諸国の新しい特別な階級特権\n- 新しい特殊ユニット、スウェーデンとフィンランドのカロラインおよびポーランド・リトアニアの有翼重騎兵\n- スカンディナヴィアとバルト諸国の新しいユニットモデル\n- スカンディナヴィアとバルト諸国の新しい6つの音楽"
  LANDING_dlc115_FLAVOR_TEXT:0 "デンマーク、スウェーデン、ノルウェーの3王国は、1397年にエーリク・ア・ポンメルン王のもとにまとめられ、不安定な連合体を形成していました。しかし、彼は1439年に退位してゴットランド島に流され、カルマル連合は不安定さを増しています。一方、バルト海を隔てたポーランド王国とリトアニア公国は、ヴァルナの戦いで王ヴワディスワフ3世が戦死し、新しい統治者を選出しなければならなくなりました。これは、チュートン騎士団とリヴォニア騎士団にとっては敗北から立ち直る、リガとダンツィヒなどの交易都市にとっては目の前にあるチャンスをつかむきっかけとなるかもしれません。\n\nLions of the Northは、スカンディナヴィアやバルト海沿岸の国家を統治し、完全な没入感の中で展開される別の道を通して、さまざまな目的を達成するよう導いていくゲームです。"
  dlc114_reason_generic:0 "§YGuns, Drums and Steel Volume 3 Music Pack§!は、テンポを早くし低音を上げたメタルな新しい曲を12曲追加し、Europa Universalisのプレイ体験を高めます。"
  dlc115_reason_mission_trees:0 "§YLions of the North Expansion§!は固有のミッションツリー・政府改革・階級特権・特殊ユニットを追加します。"
