Save/Update files [ci skip]

--- a/source/localisation/emperor_content_l_english.yml
+++ b/source/localisation/emperor_content_l_english.yml
@@ -1964,7 +1964,7 @@
  desc_delayed_payments:0 "我々が雇用している傭兵団は、給与の受け取りが遅れており、それらの兵士たちの脱走を促している。"
  revolutionary_republic_factions.1.a2:0 "理性の崇拝が導いてくれる。"
  revolutionary_republic_factions.1.b2:0 "我が神聖なる[Root.Monarch.GetTitle]を讃えよ！"
- revolutionary_republic_factions.7.d2:0 "古い秩序を粉砕することは、相当な資産を国庫へと流入させただけでなく、比類のない正義と平等を大衆にもたらした。しかし、それはまた、経験豊富な管理者、官僚、聖職者の喪失を意味していた。身分の低いこれらの子孫の多くや、かつての聖職者および他の特権階級は公務から退き、彼らの命を恐れて国を去っている。\nこれにより、我々は、管理する必要はあるものの、それを実行するための必要な経験を持つ人が少なくなる状態に陥った。実力主義を政府の指針とすることで、我々は新しい有能な市民が彼らに取って代わるのを見出すのは確実だが、このような状況は今のところまだわずかしかない。"
+ revolutionary_republic_factions.7.d2:0 "古い秩序を粉砕することは、相当な資産を国庫へと流入させただけでなく、比類のない正義と平等を大衆にもたらした。しかし、それはまた、経験豊富な管理者、官僚、聖職者の喪失を意味していた。身分の低いこれらの子孫の多くや、かつての聖職者および他の特権階級は公務から退き、彼らの命を恐れて国を去っている。\nこれにより、我々は、管理する必要はあるものの、それを実行するための必要な経験を持つ人が少なくなる状態に陥った。能力主義を政府の指針とすることで、我々は新しい有能な市民が彼らに取って代わるのを見出すのは確実だが、このような状況は今のところまだわずかしかない。"
  revolutionary_republic_factions.9.d2:0 "[Root.Capital.GetCapitalName]の人々は、統治者のエリート層の間の隠れた君主主義者と反革命派の影響を恐れ、革命の精神を守るため街頭へと繰り出した。[Root.Owner.Religion.GetName]の司祭から、身分の低い貴族の一族、または国家に対する彼らの犯罪のためにすでに投獄されている人々まで、古い秩序に関連するすべての人が標的にされた。急進派は、大衆の心と精神を燃え上がらせることに力を尽くしている。\nこれにより、政府はやや不安定な状況に置かれている。標的にされた人々の一部は、彼ら自身の階級の一員であり、これらの無制限の虐殺は、かつての美しい都市の幸福をひどく傷つけることで、我々を弱く見せている。しかし、それを止めるために我々が何かをする必要があるなら、それは急進派の策略にはまることになるだろう…"
  napoleon.1.t:0 "戦場の[Root.Monarch.GetTitle]"
  napoleon.1.d:1 "[Root.Monarch.GetTitle][Root.Monarch.GetName]は、よく知られた軍事上の巨人である。[Root.Monarch.GetHerHisCap]の存在には4万人の兵士の価値があると言われており、士官と一般兵の双方に対し、目前に迫る勝利への揺るぎない信念を植え付けている。[Root.Monarch.GetTitle]は戦場を見渡し、[Root.GetName]全体に轟く命令を発する準備をする…"
@@ -2162,7 +2162,7 @@
  military_electorate_reform_desc:0 "我が国は何よりも友人同士の善意の精神を大切にしているが、戦場で戦う少年たちが仲間となるようなその価値を例示するものはない。これらは戦争の恐怖を見て、革命を守り、前進させるため同胞たちのそばで戦った兵士たちであり、これらの兵士たちこそ我々を統治するものでなければならない。我々の軍隊に奉仕した者だけが政府内の人々を代表する資格があるよう、我々は政府において官職につく要件を変更しなければならない。"
  president_for_life_reform:0 "終身大統領"
  president_for_life_reform_desc:0 "多くの革命派の政治家は、世襲の統治者を頂点とする革命帝国の考えを支持しているが、他の政治家はこの考えに激しく抵抗し、革命そのものの理想を裏切るものだと主張している。大統領は主権者であり、大統領の権威に取って代わることはできない。終身大統領を選任することにより、我々は、共和国の理想を完全に放棄することなく、帝国主義者が要求する絶対的なリーダーシップを確保できるだろう。"
- government_for_people_reform:0 "人民のための政治"
+ government_for_people_reform:0 "人民の政府"
  government_for_people_reform_desc:0 "エガリテ（平等）、フラテルニテ（博愛）、リベルテ（自由）。共和国の3つの美徳はすべて1つのことを指している。共和国は人民に奉仕するために存在し、他の理由はない。我々は決して帝国主義に屈することはなく、大統領は常に我々の人民の自由と平等を保護することに焦点を当て、彼の任期を全うしなければならない。"
  become_rev_empire_reform:0 "革命帝国"
  become_rev_empire_reform_desc:0 "革命の炎によって燃料を供給されている共和国でさえ、政治的な王朝が我が国で確立されていることが明らかになりつつある。我々の大統領は、革命思想を広め続け、皇帝の地位と共にすべての人々に統治権を主張するため、自身が皇帝の地位に就くことを望んでいる。"
