--- a/source/localisation/flavor_events_l_english.yml
+++ b/source/localisation/flavor_events_l_english.yml
@@ -3088,7 +3088,7 @@
  flavor_jap.EVTDESC25:1 "日本全体に新しい哲学が広がり始めた。中国の哲学者孔子の教えは、「儒教」と呼ばれる倫理的かつ哲学的な制度へと発展した。その中核は人間主義である。精神的懸念の焦点は、死後の世界や家族の代わりに、現在の世界と家族でである。それは神の意志やより高い力への献身を捧げるものではない。\n\nさらに、能力主義を中心とした教義は、適切な能力のすべての個人が、そのような地位を高貴な人の地位として限定することなく、権力の地位を占めることを可能にする。これらの見解を採択することで、高度に熟練した、しかし身分の低い顧問を、自尊心の高い貴族たちが考えることのない賃金によって雇うことができる点で便利である。"
  flavor_jap.EVTOPTA25:1 "「止まりさえしなければ、どんなにゆっくりでも…」"
  flavor_jap.EVTNAME26:1 "儒教思想の高まり"
- flavor_jap.EVTDESC26:1 "中国の哲学者である孔子の教えは、民衆の間で再び普及し、その実力主義の影響は政府に向けられている。これは、再び我々に、自尊心の高い貴族が考えることのない賃金によって、高度に熟練した身分の低い顧問を雇う機会を与えた。"
+ flavor_jap.EVTDESC26:1 "中国の哲学者である孔子の教えは、民衆の間で再び普及し、その能力主義の影響は政府に向けられている。これは、再び我々に、自尊心の高い貴族が考えることのない賃金によって、高度に熟練した身分の低い顧問を雇う機会を与えた。"
  flavor_jap.EVTNAME27:0 "国学"
  flavor_jap.EVTDESC27:1 "中国、儒教、仏教の文献の研究が支配的となる中で、日本についての研究は衰退している。いくつかの学者は、初期の古典を研究し始め、儒教思想家の抑圧的な道徳を批判し、外国の思考や行動様式が流入する前に日本文化を再建しようとした。彼らは自身を国学、あるいは「国家研究」の思想家と呼んだ。"
  flavor_jap.EVTOPTA27:1 "喜んでこれらの思想家を支援しよう。"
