--- a/source/localisation/generic_events_l_english.yml
+++ b/source/localisation/generic_events_l_english.yml
@@ -1706,7 +1706,7 @@
  china_events.11.a:0 "最良の者だけで十分だ。"
  china_events.11.b:0 "我々はより多くの忠実な官僚を必要としている。"
  china_events.12.t:0 "華南の上流階級"
- china_events.12.d:0 "何世紀にもわたって華南は華北よりも裕福で人口も多い。最も豊か影響力もある一族の多くがその起源を華南に持っており、科挙の最高得点の大多数が選ばれている。\n[Root.Monarch.GetName]は、宮中に華南出身者が多いため、華南の一族が過度の影響力を持つことを懸念している。過去には、試験合格者の一部が華北出身者になるよう割り当てが行われていた。しかしながら、そのような割り当ては、実力主義を原則とする我が国の制度全体を根底から覆す危険性がある。"
+ china_events.12.d:0 "何世紀にもわたって華南は華北よりも裕福で人口も多い。最も豊か影響力もある一族の多くがその起源を華南に持っており、科挙の最高得点の大多数が選ばれている。\n[Root.Monarch.GetName]は、宮中に華南出身者が多いため、華南の一族が過度の影響力を持つことを懸念している。過去には、試験合格者の一部が華北出身者になるよう割り当てが行われていた。しかしながら、そのような割り当ては、能力主義を原則とする我が国の制度全体を根底から覆す危険性がある。"
  china_events.12.a:0 "もっと割り当てが必要だ！"
  china_events.12.b:0 "北の文人など、南とは比べものにならん…"
  china_events.13.t:0 "[levy_province.GetName]への徴税"
@@ -1865,7 +1865,7 @@
  china_events.47.a:0 "軍はこれに対処しなければならない。"
  china_events.47.b:0 "彼ら自身にやらせよう。"
  china_events.48.t:0 "廊下を舞う影"
- china_events.48.d:0 "宮殿の長い廊下を歩いていると、突然、何者かに追われているような気がする。視界の隅で白装束の男が背後から近づいてくる。悪意を持って光る短剣は見えないが、それがあなたの背後、心臓からわずか数メートルのところにあることはわかる。\nあなたが振り向くと、その男は忽然と消えている。まるでそこに彼がいなかったかのように…"
+ china_events.48.d:0 "宮殿の長い廊下を歩いていると、突然、何者かに追われているような気がする。視界の隅で白装束の男が背後から近づいてくる。悪意を持って光る短剣は見えないが、それがあなたの背後、心臓からわずか数ヤードのところにあることはわかる。\nあなたが振り向くと、その男は忽然と消えている。まるでそこに彼がいなかったかのように…"
  china_events.48.a:0 "敵はどこにでもいる！"
  china_events.48.b:0 "確かに、余は皆を信頼している。あとは休むだけだ。"
  china_events.49.t:0 "不吉な日蝕"
@@ -1896,71 +1896,71 @@
  china_events.55.b:0 "[empire_of_china.GetName]は我らの友だ！"
  china_events.56.t:0 "欠陥のある洞察"
  china_events.56.d:0 "内閣大学士は最近、それぞれの専門分野における過去数年の進歩についての報告書を送っており、そこには悲惨な知らせがあった。政府機関の一つは、将来の進捗率の見積りを大幅に引き下げており、その部門を担当する派閥は、この出来事で多くの面目を失うことになる。これらの出来事は、我々がもはや天命を享受していないことがますます明らかになっている時にもたらされた。\nどの政府機関が誤った管理をされていたのだろうか？"
- china_events.56.da:0 "内閣大学士は最近、それぞれの専門分野における過去数年の進歩についての報告書を送っており、そこには悲惨な知らせがあった。政府機関の一つが、将来の進捗率の見積りを大幅に引き下げた。これらの出来事は、我々がもはや天命を享受していないことがますます明らかになっている時にもたらされた。"
- china_events.56.a:0 "統治機関。"
- china_events.56.b:0 "課税と交易機関。"
- china_events.56.c:0 "軍事機関。"
+ china_events.56.da:0 "内閣大学士は最近、それぞれの専門分野における過去数年の進歩についての報告書を提出したが、そこには悲惨な知らせがあった。政府機関の一つが、将来の進捗率の見積りを大幅に引き下げたのだ。これらの出来事は、我々がもはや天命を享受していないことがますます明らかになっている時にもたらされた。"
+ china_events.56.a:0 "統治機関か。"
+ china_events.56.b:0 "課税・交易機関か。"
+ china_events.56.c:0 "軍事機関か！"
  china_events.56.dd:0 "確かに悲惨な時代だ。"
  china_events.57.t:0 "謀反"
  china_events.57.d:0 "帝国の至る所にいる君主たちは、地方の支配がより弱くなるにつれ、これを大きな関心を持って見守っている。地域によってはすでに権威を奪い始めており、他方では明白な反乱が差し迫っているようだ。"
- china_events.57.a:0 "帝国の制度が崩れてゆく…"
+ china_events.57.a:0 "帝制が崩れてゆく…"
  low_mandate_separatism_tooltip_1:0 "我々の支配下にある§Y[low_mandate_separatism_country.GetName]§!の§Y中核州§!すべてで§Y州の不穏度§!が§R10§!増加します。"
  low_mandate_separatism_tooltip_2:0 "我々の支配下にある§Y[low_mandate_separatism_country_2.GetName]§!の§Y中核州§!すべてで§Y州の不穏度§!が§R10§!増加します。"
  low_mandate_separatism_tooltip_3:0 "我々の支配下にある§Y[low_mandate_separatism_country_3.GetName]§!の§Y中核州§!すべてで§Y州の不穏度§!が§R10§!増加します。"
- china_events.58.t:0 "内閣大学士は月に吠える"
- china_events.58.d:0 "最近、深夜に内閣大学士の別荘から奇妙な騒音が聞こえており、月ごとにその激しさと強さが増している。最初のうち、あなたは彼が妾の一人との複雑な遊びなのだろうと考えていたが、しかし最近、月の位相と騒音との間に顕著な繋がりがあることが浮かび上がってきた。満月の夜に庭園に送られた諜報員は、不安にさせるような知らせを持ち帰った。内閣大学士は、彼の庭に立ち、月に向かって吠えながら夜を過ごしていたというのだ。"
- china_events.58.a:0 "シャ・ラ・ラ・ラ！"
- china_events.58.b:0 "彼は法を手に取り、それを投げ捨てている！"
- china_events.59.t:0 "税のはしけは沈んだ"
- china_events.59.d:0 "恐ろしい知らせが、珠江から我々に届いており、珠江では、実質的に$YEAR$年度の分の税を運ぶはしけが、特に悪天候の際に沈んでいると言う。内閣大学士は、これらの出来事を、我々の王朝がもはや天命を与えられていない兆候であると解釈し、この摂理の転換を受け入れ、尊重しなければならないと主張している。これらの悪い知らせに対し、我々はどのように対応するべきだろうか？"
+ china_events.58.t:0 "内閣大学士、月に吠ゆ"
+ china_events.58.d:0 "最近、ある内閣大学士の屋敷から夜中に奇妙な音がするようになり、月ごとにその激しさと強さが増している。当初は、妾の一人との複雑な遊びのせいだと考えていたが、最近になって、月の満ち欠けと騒音の間に驚くべき関係があることに気付き始めた。満月の夜に庭に送り込まれた諜報員が、不安にさせるような知らせを持ち帰った。内閣大学士は夜な夜な庭に立ち、月に向かって吠えているというのだ。"
+ china_events.58.a:0 "ウオォォォーーー！"
+ china_events.58.b:0 "奴は法を奪い、それを投げ捨てたのだ！"
+ china_events.59.t:0 "税のはしけが沈没"
+ china_events.59.d:0 "珠江から恐ろしい知らせが届いた。$YEAR$年度分相当の税を運ぶはしけが、特にひどい悪天候のために沈没したのだ。内閣大学士は、この出来事を、我々の王朝がもはや天命を与えられていない兆候であると解釈し、この摂理の転換を受け入れ、尊重しなければならないと主張している。これらの悪い知らせに対し、我々はどのように対応するべきだろうか？"
  china_events.59.a:0 "はぁ、できることは少ないな、いや、あるのか？"
  china_events.59.b:0 "損失を取り戻すために鋳造する。"
- china_events.60.t:0 "偽の布告"
- china_events.60.d:0 "州は首都に新しい布告のいくつかのまとまりを完全に遵守していると報告しているが、唯一の問題はそのような布告を発行した覚えがないことである。この問題についての調査では、あなたの印をつけた偽造された布告の銅の銘板が、どういうわけか州の総督のもとに届けられたことが明らかになっている。人々は暗い場所ではもはや公然と皇帝に挑戦しており、多くの人が、これは我々の王朝がもはや天命を享受していないためであると主張している。これらの虚偽の布告についてはどのようにすべきだろうか？"
- china_events.60.a:0 "それらを自分のものであるふりをする。"
+ china_events.60.t:0 "偽勅"
+ china_events.60.d:0 "諸州から首都に、いくつかの新しい詔勅を完全に遵守しているとの報告があった。唯一の問題は、そのような詔勅を発行したことがないことだ。この問題を調査したところ、あなたの印が押された勅令の書かれた偽造の銅板が、どういうわけか各州の知事の手に渡っていることが明らかになった。皇帝に堂々と楯突くとは暗黒の時代だ。我が王朝がもはや天命を享受できないからだと言う者も多い。これら偽の勅令について、我々はどうすべきだろうか？"
+ china_events.60.a:0 "自分のものであるふりをする。"
  china_events.60.b:0 "それらを取り消す。"
- china_events.61.t:0 "反逆だ！"
+ china_events.61.t:0 "反逆！"
  china_events.61.d:0 "国境地域における帝国の影響が衰えた結果、地方の役人は、我々がもはや天命を所有していないと宣言した。彼らは、隣接する[From.GovernmentName]の[From.GetName]に向かって、我々の土地に侵入するように彼らを誘っている。"
  china_events.61.a:0 "これは耐えられない！"
- china_events.62.t:0 "皇帝の権力の衰退"
- china_events.62.d:0 "[From.GetAdjective]帝国は急速に衰退しており、国境を越えてあらゆる種類の権力を投影する能力もまた同様である。[From.Capital.GetCapitalName]の我々の代表は、[From.Monarch.GetTitle]との謁見を得ようとする彼らの試みが、内容の乏しい、侮辱的な言い訳にすぎないと報告している。"
- china_events.62.a:0 "彼らは名ばかりの我々の君主だ。"
+ china_events.62.t:0 "帝権の衰退"
+ china_events.62.d:0 "[From.GetAdjective]帝国は急速に衰退しており、国境を越えて何らかの力を発揮する能力も低下している。[From.Capital.GetCapitalName]の我々の代理人は、[From.Monarch.GetTitle]に謁見しようと試みたが、弱々しい、侮辱的な言い訳にしか出会えなかったと報告している。"
+ china_events.62.a:0 "彼らは名ばかりの宗主国サマだ。"
  EVTNAME11102:0 "玉璽"
- EVTDESC11102:0 "あなたの威厳に対して、ある段階の職人技の翡翠で造られた印のような贈り物が贈られた。この贈り物は、官僚派閥に関連する上級の役人によって提示されている。中国では何も無料なものはないので、彼はおそらく我々が好意を返すと期待している。"
+ EVTDESC11102:0 "陛下は、贈り物として職人技が垣間見える玉璽をお受け取りになられました。この贈り物は、官僚派閥に属する新進気鋭の行政官によるものです。中国にはタダで手に入るものはない以上、おそらく彼は見返りを期待しているのでしょう。"
  EVTOPTA11102:0 "彼はあまりに多くを期待している。"
- EVTOPTB11102:0 "当然ながら、我々は贈り物を受け入れよう！"
+ EVTOPTB11102:0 "当然ながら、贈り物を受け取ろう！"
  EVTNAME11200:0 "仏の笑み"
  EVTDESC11200:0 "仏教の儀式を実践する住人がますます増えているため、孔子の著作は$PROVINCENAME$で忘れ去られている。この知らせは、国家が認可した儒教の成功を誇りに思っていた寺院派の主要な後退につながっている。州に秩序を即座に回復させるために役人を派遣することは可能だが、地方に別の信仰を強いることは、その州の経済力を損なう可能性が最も高い。"
  EVTOPTA11200:0 "彼らは彼らが望むものを信じることができる。"
  EVTOPTB11200:0 "すぐに役人を派遣する。"
  EVTNAME11206:0 "纏足"
- EVTDESC11206:0 "それらの骨が壊れて変形するまで、若い女性たちの足を縛って拘束することで、女性と人間の美しさの驚異が作り出される。纏足の流行が広がり、そして衰退するまで100年ほどだったが、これが広がったのは、寺院派が全国の美しさのこの健全な理想を積極的に推進していたことによるものと思われる。"
+ EVTDESC11206:0 "若い女性の足を、骨の一本一本が折れて変形するまで縛り続けることは、女性と人間の美しさの不思議を生み出す。纏足の流行は100年周期で盛衰しているが、今回の盛衰は、寺院派がこの健全な美の理想を全国に積極的に広めていることに起因しているようである。"
  EVTOPTA11206:0 "誰もがこの模範に従わなければならない！"
  EVTOPTB11206:0 "これは度を超えているように思える。"
  EVTOPTB11214:0 "寺院は正しい考えを持っている！"
  EVTNAME11220:0 "チベット僧"
  EVTDESC11220:0 "チベットからの旅行者が$CAPITAL$に到着した。彼は遠く離れたラサから旅して来たと語っており、さらに、仏の言葉を広めるためにやって来た。寺院派は、この要求に反対して、代わりに孔子の伝統的な教えを我々の人々の霊的指導の唯一の源泉として選んだ。寺院派閥の立場に立つべき状況ではあるが、仏教の過度の弾圧は我が国を不安定にするだろう。"
  EVTOPTA11220:0 "もちろん、彼が説教するのは自由だ。"
- EVTOPTB11220:0 "我々はこの害虫を取り除く必要がある！"
+ EVTOPTB11220:0 "この害虫を取り除くべきだ！"
  EVTNAME11222:0 "焚書"
- EVTDESC11222:0 "寺院派閥は、$COUNTRY$を悩ましている不和と分裂を十分に持っていた。国内で繁栄している無数の思考の流派に目を向けると、我々は悩ましい時代に生きている、と彼らが主張するのも不思議ではない。寺院派は真の儒教の価値への復帰だけが秩序を回復できると考えているが、いくつかの異教の教えを燃やすよりも良い方法は何かないものだろうか？"
+ EVTDESC11222:0 "寺院派閥は、$COUNTRY$を苦しめる不和と争いにうんざりしていた。国内で繁栄している無数の思考の流派に目を向けると、我々は悩ましい時代に生きている、と彼らが主張するのも不思議ではない。寺院派は真の儒教の価値への復帰だけが秩序を回復できると考えているが、いくつかの異教の教えを燃やすよりも良い方法は何かないものだろうか？"
  EVTOPTA11222:0 "それは良い考えに聞こえるな！"
  EVTOPTB11222:0 "また次の機会にしよう。"
- EVTNAME11224:0 "学者の生き埋め"
+ EVTNAME11224:0 "坑儒"
  EVTDESC11224:0 "ここ数年の間に中国を支配した多元的思考の風潮にうんざりしていた寺院派閥は、問題を自らの手で解決しようとした。全国のいくつかの州では、公式の儒教教義以外のいく人かの著名な学者が生き埋めにされている。これが革新への打撃になることはすでに明らかだが、どのように寺院を罰するべきだろうか？"
  EVTOPTA11224:0 "赦し、忘れよう！"
  EVTOPTB11224:0 "彼らに同じやり方で償わせる。"
- EVTOPTC11230:0 "試験の中心の学者"
+ EVTOPTC11230:0 "試験場の学者"
  EVTNAME11242:0 "金色の仏塔"
- EVTDESC11242:0 "瀕死の太陽の赤みを帯びた金色に包まれ、その上に浮かぶ天の青を反映して、唐の時代から、あるいはおそらくもっと長い昔から金に輝く仏塔は立っていた。仏塔内の沈黙と暗闇は、外の光と反射とははっきりと対照的である。仏教は珍しくなってきているので、仏塔は未使用であり、廷臣たちは何ができるのか、さまざまな提案を持っている。"
- EVTOPTA11242:0 "宦官：それを溶かして金貨を鋳造する！"
- EVTOPTB11242:0 "官僚：それを試験の中心地に転用する！"
- EVTOPTC11242:0 "寺院：邪魔せずその美しさを残す。"
+ EVTDESC11242:0 "枯れゆく太陽の赤々とした黄金に包まれ、天の青さを映し出す金塔は、唐の時代から、あるいはもっと古くから建っていたのだろう。塔の中は静寂と暗闇に包まれ、外の光と反射とは対照的である。仏教が珍しくなって以来、仏塔は使われなくなり、廷臣たちはこの仏塔をどうしたらいいか、いろいろと提案している。"
+ EVTOPTA11242:0 "宦官：溶かして金貨を鋳造すべきです！"
+ EVTOPTB11242:0 "官僚：科挙の試験場に転用しましょう！"
+ EVTOPTC11242:0 "寺院：邪魔せずその美しさを残すべきでしょう。"
  EVTOPTA11300:0 "宦官の下に逃げる！"
  EVTOPTB11300:0 "官僚の下に逃げる！"
  EVTOPTC11300:0 "立ち向かい、戦う！"
  EVTNAME11302:0 "官僚が国庫から盗む"
- EVTDESC11302:0 "官僚派閥の高官は、帝国の国庫から自分の懐へ資金を吸い込んでいる。考えられる唯一の刑罰はもちろん死であるが、彼を置き換えなければならない人の問題はそれほど明白ではない。宦官と寺院の両方の派閥には強力な候補者がいるが、官僚派閥の候補者は確かに仕事を処理するのには最適な候補者だ。誰が仕事を得るべきだろうか？"
+ EVTDESC11302:0 "官僚派閥の高官が、帝国の国庫から私腹を肥やしていたことが発覚した。当然、死刑しか考えられないが、その後任を誰にするかという問題は、あまり明確ではない。宦官派、寺院派それぞれに有力な候補者がいるが、官僚派の候補者が最も適任であることは間違いない。誰がなるべきか？"
  EVTOPTA11302:0 "宦官の候補"
  EVTOPTB11302:0 "寺院の候補"
  EVTOPTC11302:0 "ふぅ。新しい官僚を探そう。"
@@ -1969,12 +1969,12 @@
  EVTOPTA11306:0 "評判を受け入れる。"
  EVTOPTB11306:0 "宣伝活動を開始する。"
  EVTNAME11316:0 "闇の中の短剣"
- EVTDESC11316:0 "叫び声は宮殿の中をこだまするが、すぐに夜の沈黙と黒に再び溶ける。廷臣が殺害され、寝室で発見された彼は、背中に深く刺さった刃と、体の残りの部分にいくつかの刺し傷がある。兄弟殺しや内紛は、$COUNTRY$でますます一般的になってきており、多くの人が我々がもはや天命を享受していないと信じている。殺人事件には3人の容疑者がいるが、やったのは誰だろうか？"
- EVTOPTA11316:0 "宮廷の料理人が、寝室のナイフで。"
- EVTOPTB11316:0 "内閣大学士が、寝室のナイフで。"
- EVTOPTC11316:0 "偉大な元帥が、寝室のナイフで。"
- EVTNAME11320:0 "乗馬の事故"
- EVTDESC11320:0 "彼らはあなたの前に、担架の上に死んで横たわっているあなたの後継者を連れて現れた。彼は何人かの仲間と乗馬中に、馬から落ちた。彼の死の無駄を考えるとき、あなたは静かな怒りだけを感じることができる。皇帝の息子が、死んだ、戦争や戦いではなく、無意味な事故で。この出来事は、天命が我々の王朝から過ぎ去ったこと、そしてそれを取り戻す必要があるという明確な兆候である。彼の仲間は様々な派閥から来ているが、誰が事件のために処罰されるべきだろうか？"
+ EVTDESC11316:0 "悲鳴が宮殿に響き渡るが、すぐにまた夜の静寂と暗闇の中に消えていく。廷臣が殺されたのだ。寝室で発見された彼の背中には刃物が突き刺さっており、他の部位にも数カ所の刺し傷が付いていた。このように、$COUNTRY$では仲間割れや内紛が頻発しており、もはや天命を享受することはできないと考える者も少なくない。殺人事件には3人の容疑者がいるが、やったのは誰だろうか？"
+ EVTOPTA11316:0 "宮廷料理人が、寝室でナイフを使って。"
+ EVTOPTB11316:0 "内閣大学士が、寝室でナイフを使って。"
+ EVTOPTC11316:0 "大将軍が、寝室でナイフを使って。"
+ EVTNAME11320:0 "乗馬中の事故"
+ EVTDESC11320:0 "担架に乗せられた皇太子が、目の前で死んでいる。彼は仲間と乗馬に出かけ、どうやら落馬したらしい。彼の死の無益さを思うと、静かな怒りがこみ上げてくるのを感じるだけだ。皇帝の息子が、戦争でも戦闘でもなく、無意味な事故で死んだ。この出来事は、天命が我が王朝から過ぎ去ったことを明確に示している。そして、我々はそれを取り戻さなければならないのだ。彼の仲間は様々な派閥に属しているが、誰がこの事件のために処罰されるべきだろうか？"
  EVTOPTA11320:0 "背の高い男。"
  EVTOPTB11320:0 "色白の男。"
  EVTOPTC11320:0 "宦官。"
@@ -1986,19 +1986,19 @@
  EVTDESC10501:0 "宮廷の閣僚や顧問の間では、自身で重要な国の意思決定を行い、王の権力を単なる傍観者に減らす習慣が長い間続いてきた。\n\nこれは隣人には弱点の兆候と解釈されるかもしれない。この可能性のある脅威に対抗し、王の支配を強化するためには、おそらく体制の変更が必要だろうか？"
  EVTOPTA10501:0 "すべての決断は、王の承認を得る必要がある。"
  EVTOPTB10501:0 "現在の制度は十分に機能している。"
- EVTNAME10502:0 "新聞事務所"
- EVTDESC10502:0 "政府や君主から搾取され不当な扱いを受けてきた臣民は、自らの懸念を示す機会がほとんど、いやまったくありませんでした。こういう事例を見直すために、政府の特別支部を組織することが我々に対して示唆されています。"
- EVTOPTA10502:0 "新聞事務所を創設します"
- EVTOPTB10502:0 "不条理な要求を却下します。"
+ EVTNAME10502:0 "申聞鼓"
+ EVTDESC10502:0 "政府や君主から搾取され不当な扱いを受けてきた臣民は、自らの懸念を示す機会がほとんど、いやまったくありませんでした。こういった事例を見直すために、政府に特別部署を設置することが提案されています。"
+ EVTOPTA10502:0 "申聞鼓を創設する。"
+ EVTOPTB10502:0 "不条理な要求を却下する。"
  EVTNAME4001:0 "貴族が西洋化に抵抗"
  EVTDESC4001:0 "西洋化しようとする我々の試みは、地元の貴族からの拒否とぶつかりあっている。彼らは現在、彼らの特権を妨害していると感じる最新の要求に対して、武器を取っている。"
  EVTOPTA4001:0 "要求を無視しよう。"
  EVTOPTB4001:0 "要求を受け入れよう。"
  EVTNAME4002:0 "州が西洋化に抵抗"
  EVTDESC4002:0 "西洋化しようとする私たちの試みは、$COUNTRY$のどこにも普及していない。州の一部は、変更を受け入れるための対価として、より大きな自治を求めている。"
- EVTOPTA4002:0 "自治権をある程度与えよう。"
- EVTOPTB4002:0 "西洋化を遅らせる。"
- EVTNAME4003:0 "農民が欧州に抵抗"
+ EVTOPTA4002:0 "自治権を与えよう。"
+ EVTOPTB4002:0 "西洋化を遅らせよう。"
+ EVTNAME4003:0 "農民が西洋化に抵抗"
  EVTDESC4003:0 "無知な農奴たちは再び怒りを覚えており、現代化して文明化されるという合理的な要求に対して大混乱を招いている。これはとんでもないが、彼らの要求を受け入れるための対価は高すぎるかもしれない。"
  EVTOPTA4003:0 "要求を無視しよう。"
  EVTOPTB4003:0 "要求を受け入れよう。"
@@ -2022,7 +2022,7 @@
  EVTDESC4008:0 "いく人かの政府の役人は、西洋化の試みが急速に進んでおり、国を破滅の瀬戸際に追いやるかもしれないとの懸念を表明している。彼らは、これを直ちに中止するように勧め、さもなければ抗議の中で辞任するかもしれない。"
  EVTOPTA4008:0 "要求を無視しよう。"
  EVTOPTB4008:0 "要求を受け入れよう。"
- EVTNAME4009:0 "最高指揮官が西洋化に抵抗"
+ EVTNAME4009:0 "軍首脳部が西洋化に抵抗"
  EVTDESC4009:0 "西洋化しようとする我々の試みは、軍隊の最高指揮官からの拒否とぶつかりあっている。彼らは、我々にこれを止めるよう要求し、さもなければ、彼らの何人かは抗議して辞任するかもしれない。"
  EVTOPTA4009:0 "要求を無視しよう。"
  EVTOPTB4009:0 "要求を受け入れよう。"
