--- a/source/localisation/powers_and_ideas_l_english.yml
+++ b/source/localisation/powers_and_ideas_l_english.yml
@@ -3222,8 +3222,8 @@
  chinese_ideas:0 "中国のアイデア"
  chinese_ideas_start:0 "中国の伝統"
  chinese_ideas_bonus:0 "中国の宿願"
- keju_examination:0 "科挙試験"
- keju_examination_desc:0 "科挙試験は、賢明な人々を我が国に奉仕させるために我々の宮廷へと昇格させる効果的な方法である。我々の祖先は何世紀にもわたってそれを利用してきた。我々がこの制度を採用しないことは賢明ではないだろう。"
+ keju_examination:0 "科挙"
+ keju_examination_desc:0 "科挙は、賢明な人々を我が国に奉仕させるために我々の宮廷へと昇格させる効果的な方法である。我々の祖先は何世紀にもわたってそれを利用してきた。我々がこの制度を採用しないことは賢明ではないだろう。"
  scholar_gentry:0 "士大夫"
  scholar_gentry_desc:0 "士大夫は、高度に教育された儒教の紳士で構成され、我が国の柱である。これらの人々は道徳的に優れているだけでなく、政治と行政の比類なき熟練者である。"
  order_of_four_occupations:0 "士農工商"
@@ -5101,7 +5101,7 @@
  yua_keshik_and_weijun:0 "ケシクと衛軍"
  yua_keshik_and_weijun_desc:0 "すべての遊牧民の一つのハーンとして、我々の支配者は彼のケシクを伴う必要があり、中華帝国の天子として、彼は帝国の親衛隊である衛軍によって守られる必要がある。彼らは指導者の二つの翼であり、我が国の派閥として互いの権力の均衡が取られている。\n"
  yua_sino_mongol_administration:0 "支那－モンゴル統治"
- yua_sino_mongol_administration_desc:0 "中国人は長い間、安定した統治の伝統を持っており、それは我々にとって有用である。しかし、我々の帝国を維持するためには、実力主義と奉仕という中国の理想に惑わされてはならない。モンゴル人の統治は忠誠と信頼性を強調し、帝国全土から有能な人々を雇用するという長い伝統を持っている。\n我々は、チベット高原、広大なステップ、中国自体の広大な広がりを支配することができる、混合した統治を作り出すため、モンゴルと中国の伝統との間に黄金のバランスを見つけるよう、努力する必要がある。\n"
+ yua_sino_mongol_administration_desc:0 "中国人は長い間、安定した統治の伝統を持っており、それは我々にとって有用である。しかし、我々の帝国を維持するためには、能力主義と奉仕という中国の理想に惑わされてはならない。モンゴル人の統治は忠誠と信頼性を強調し、帝国全土から有能な人々を雇用するという長い伝統を持っている。\n我々は、チベット高原、広大なステップ、中国自体の広大な広がりを支配することができる、混合した統治を作り出すため、モンゴルと中国の伝統との間に黄金のバランスを見つけるよう、努力する必要がある。\n"
  yua_a_thousand_miles_as_if_at_home:0 "家のように1000マイル"
  yua_a_thousand_miles_as_if_at_home_desc:0 "大元ウルスは、かつてその素晴らしい道路網によって万人から称賛されていた。その整備の行き届いた街道を通って、遠路でも労せずして旅することができた。我々がクビライ・ハンと同様の巨大な帝国を支配するのであれば、この遺産を復活させるために努力すべきだ。\n"
  city_upon_a_hill:0 "丘の上の町"
