Save/Update files [ci skip]

--- a/source/localisation/EU4_l_english.yml
+++ b/source/localisation/EU4_l_english.yml
@@ -940,9 +940,9 @@
  castilian_civil_war.100.b:0 "我々とポルトガルとの接近をもたらすだろう。"
  polish_noble_rebels_demand:0 "選挙君主制への回帰"
  polish_noble_rebels_demand_desc:0 "貴族たちは、騎士たちが卑しい農民の財産を支配していた古いやり方に戻ることを要求している。彼らはこの国の商人と農民の時代の終わりを要求している。"
- polish_noble_rebels_title:0 "有力者"
- polish_noble_rebels_name:0 "$COUNTRY$有力者の反乱軍"
- polish_noble_rebels_desc:0 "有力者の反乱軍は、通常は自由主義的改革のために、彼らの君主に不満を持っている。彼らは大部分が騎兵から成る専門の軍隊を編成する。"
+ polish_noble_rebels_title:0 "マグナート"
+ polish_noble_rebels_name:0 "$COUNTRY$のマグナートの反乱軍"
+ polish_noble_rebels_desc:0 "マグナートの反乱軍は、通常は自由主義的改革のために、彼らの君主に不満を持っている。彼らは大部分が騎兵から成る専門の軍隊を編成する。"
  polish_noble_rebels_army:0 "貴族軍"
  french_wars_of_religion:0 "フランスの宗教的内戦"
  french_wars_of_religion_desc:0 "フランスは、一連の宗教的内戦によって引き裂かれている。"
@@ -1234,7 +1234,7 @@
  RESOURCE_PRICE_DATA2:0 "現在の価格は§Y$PRICE$§!¤です。"
  GAIN_CB:1 "§Y$ACTIVE$§!は§Y$WHO$§Wに対し§Y$TYPE$§Wの開戦事由を得ます。\nこの開戦事由は§G$LENGTH$§!年間有効です。\n"
  LOSE_CB:0 "§Y$ACTIVE$§!は§Y$WHO$§Wに対し§Y$TYPE$§Wの開戦事由を失います。\n"
- REV_GAIN_CB:0 "§Y$ACTIVE$§Wは§Y$PASSIVE$§Wに対し§Y$TYPE$§Wの開戦事由を得ます。"
+ REV_GAIN_CB:1 "§Y$ACTIVE$§Wは§Y$PASSIVE$§Wに対し§Y$TYPE$§Wの開戦事由を得ます。\nこの開戦事由は§G$LENGTH$§!間有効です。\n"
  SELECT_INFANTRY_TYPE:0 "歩兵の種類を選択"
  SELECT_CAVALRY_TYPE:0 "騎兵の種類を選択"
  SELECT_ARTILLERY_TYPE:0 "砲兵の種類を選択"
@@ -3389,7 +3389,7 @@
  TIME_DAYS:0 "$DAYS|Y$日かかるでしょう。"
  TIME_MONTHS:0 "$MONTHS|Y$ヶ月かかるでしょう。"
  TIME_YEARS:0 "$YEARS|Y$年かかるでしょう。"
- THEY_DESIRE:0 "彼らは望みます"
+ THEY_DESIRE:0 "要求する州は"
  AND_MORE:0 "その他$VAL$"
  AND_MORE_LOWERCASE:0 "その他$VAL$"
  DISABLED_ALERTS:0 "警告を無効化"
@@ -5058,7 +5058,7 @@
  MODIFIER_CAN_TRANSFER_VASSAL_WARGOAL:1 "「§Y従属国の移譲§!」の和平協定のコストが半分になります"
  MODIFIER_CAN_CHAIN_CLAIM:0 "請求権のある州に隣接する州への請求を可能にします"
  MODIFIER_FREE_MAINTENANCE_ON_EXPL_CONQ:0 "探検家と征服者に維持費がかかりません"
- MODIFIER_CAN_COLONY_BOOST_DEVELOPMENT:1 "植民地が完成すると、税金+1、生産+1、人的資源+1されます"
+ MODIFIER_CAN_COLONY_BOOST_DEVELOPMENT:2 "植民地が完成すると、§Y各開発度§!が+1されます"
  MODIFIER_ATTACK_BONUS_IN_CAPITAL_TERRAIN:3 "首都と同じ地形での戦闘ボーナス：§G+1§!"
  MODIFIER_ATTACK_BONUS_IN_CAPITAL_TERRAIN_IN_PROV:1 "首都と同じ地形のため、自軍に§G+1の戦闘ボーナス§!"
  MODIFIER_CAN_BYPASS_FORTS:0 "ZOCを無視します"
