--- a/source/localisation/emperor_content_l_english.yml
+++ b/source/localisation/emperor_content_l_english.yml
@@ -928,7 +928,7 @@
  shadow_kingdom.2.d:1 "イタリア王国は現在も名目上は帝国の一部だが、帝国の支配は今やあらゆる面で弱まり、「影の王国」となってしまっている。イタリア諸国は今や帝国の意向を無視し、独自行動を始めている。これまで代々の皇帝が行ってきたイタリアを支配しようとする試みが全て失敗に終わったことも、イタリア諸国が帝国の権威を公然と無視するに至ったことの原因だろう。\nイタリア諸国にとって今問題となっているのは、果たしてこれからも皇帝の支配を受け続けるべきなのかということである。"
  shadow_kingdom.2.a:0 "イタリアを放棄しよう。"
  shadow_kingdom.2.b:0 "イタリア支配を回復しなくては。"
- shadow_kingdom_emperor_gives_up_tt:0 "§Y帝国内の統制されているイタリア国家は帝国に留まるでしょう。§!\n§Y統制されていないイタリア国家は帝国を去るでしょう。§!"
+ shadow_kingdom_emperor_gives_up_tt:1 "§Y帝国内の統制されているイタリア国家は帝国に留まるでしょう。§!\n§Y統制されていないイタリア国家は帝国を去るでしょう。§!\n\n§Y皇帝は帝国から離脱する州の開発度ごとに§R0.2§!の帝国の権威を失います。§!"
  shadow_kingdom_incident_tt:0 "§Y皇帝は1490年までに、帝国のできるだけ多くのイタリア国家を統制しなければなりません。§!"
  shadow_kingdom.3.t:0 "影の王国"
  shadow_kingdom.3.d:0 "帝国はイタリア支配を継続することを決定したが、帝国の支配を受け入れようとしないイタリア諸国は今も多数存在する。しかし、[Root.GetAdjective]の努力は無駄ではなかった。帝国の支配が取り戻された国々は、もう二度と帝国に挑戦することはないだろう。"
@@ -2104,11 +2104,11 @@
  regionally_elected_commanders:0 "地方選出の騎士団長"
  regionally_elected_commanders_desc:0 "我々の政府では、現在の支配者の後継は、信仰を守ることに命を捧げてきた戦士からの投票によって決定される。我々の保護下にある町や村の住民が自分たちの利益を代表する騎士団長の選出に参加できるようにすることで、我々は統治の拡大を開始し、我々の保護下にある彼らに対し、騎士団長の宮廷に正確に代表権を行使していると感じさせることができる。"
  monastic_elections_reform:0 "公選の実施"
- monastic_elections_reform_desc:0 "我々の保護下にある多くの村は代表権を要求しており、彼らは騎士団の統治が神聖なものであることを理解していない愚か者であるとはいえ、彼らを満足させておくためにはある程度譲歩する必要がある。これまでは修道会の新しい指導者選出に投票できるのは騎士だけであったが、これを公に開放し、人々が投票するための二つの分団を設立することにする。これで彼らは国家によって自分たちの利益を代弁してくれると感じるであろう。"
- commander_king_reform:0 "世襲の修道会"
- commander_king_reform_desc:0 "信仰は常に我々の国家で重要な役割を果たしているが、我々の政府はこの変化する世界で広大な領土や儀式を支配するのに十分に適応できないことが明らかになりつつある。我々の騎士団長が独身であることを誓わなければならない理由はなく、我々の国家を世襲の修道会へと再編成し、騎士団長に王位の称号を与えることにより、我々は騎士団長である王によって導かれる信仰と王冠の保護者となるだろう。"
+ monastic_elections_reform_desc:1 "Many villages under our protection demand representation, and although they are fools who do not understand that our rulership is divine, we must grant them some concessions if we are to keep them happy. Traditionally, only the elite of the Clergy would vote for the new leader of our government, but by opening elections to the public and establishing two new subdivisions of our government for the people to vote for, they may feel their interests are represented by the state."
+ commander_king_reform:1 "世襲神権制"
+ commander_king_reform_desc:1 "Faith will always play a vital role in our state, but it is becoming clear that our government is not adaptable enough to rule vast swathes of land and function in this changing world. There is no reason that our men of faith must swear themselves into celibacy and by reorganizing our state into a Dynastic Theocracy and granting our rulers royal titles, we will become protectors of the faith and the crown, guided by our Theocratic King."
  admiral_king_reform:0 "海の支配者"
- admiral_king_reform_desc:0 "海を渡る巡礼者のための安全な航路を確保するため我々の兵士たちが行った良い仕事は、我々の帆船を海賊と異教徒の双方にとって恐れられる存在へと変えた。しかし、海賊が我々の信仰にもたらす脅威は我々の小さな海岸をはるかに超えていることが明らかになっており、我々が聖なる使命を適切に果たすためには、それ自体が帝国になるため、我々の修道会を拡大しなければならない。政府内で一連の改革を実施することにより、我々は国境を越えて統治を大幅に拡大し、我々の勇敢な騎士団は、神の前で従属した海賊の頭領の数に基づき、すべての将来の指揮官を選出するだろう！"
+ admiral_king_reform_desc:1 "海を渡る巡礼者のための安全な航路を確保するため我々の兵士たちが行った良い仕事は、我々の帆船を海賊と異教徒の双方にとって恐れられる存在へと変えた。しかし、海賊が我々の信仰にもたらす脅威は我々の小さな海岸をはるかに超えていることが明らかになっており、我々が聖なる使命を適切に果たすためには、それ自体が帝国になるため、我々の政府を拡大しなければならない。政府内で一連の改革を実施することにより、我々は国境を越えて統治を大幅に拡大し、我々の勇敢な騎士団は、神の前で従属した海賊の頭領の数に基づき、すべての将来の指揮官を選出するだろう！"
  church_and_state_reform:0 "教会と国家"
  church_and_state_reform_desc:0 "信仰と国家は世界を支える二つの柱である。我々の法律は神聖な法律であり、疑問を呈することはできない。"
  religious_harmony_reform:0 "魂と肉体"
@@ -3322,3 +3322,5 @@
  aug_textile_industry:0 "アウクスブルクの織物工業"
  aug_textile_industry_desc:0 "アウクスブルクは職工や高品質の織物の都市として常に評判だった。その評判は、フッガー家の黎明期の事業戦略によって、部分的に残っていった。レヒ川の流れを利用することで、アウクスブルクの織物工場は質も量も最高級の織物製品を製造し、この布地を中央へと供給した。"
  emperor_privilegia_de_non_appelando_member:0 "諸侯特権の廃止"
+ dutch_revolt_disaster_at:0 "§Y低地諸国§!の非§Y[Root.Religion.GetName]§!の州である。"
+ dutch_revolt_disaster_bt:0 "§Y低地諸国§!で不穏度が§Y3§!の州である。"
