--- a/source/localisation/emperor_missions_l_english.yml
+++ b/source/localisation/emperor_missions_l_english.yml
@@ -990,7 +990,7 @@
  emp_ser_secure_the_sava_desc:0 "サワ川はクロアチアとスラヴォニアを通り、ベオグラードでドナウ川に流れ込む。それはバルカン半島で最も重要な水脈の1つで、広大なドナウ川に次ぐものだ。それを我々の支配の外に残すことは、我々の敵の手に交易と軍のための重要なルートを残すということだ。我々は自身のためにそれを確保しなければならない！"
  emp_ser_encroach_on_the_germans_title:0 "ドイツへの浸食"
  emp_ser_encroach_on_the_germans_desc:0 "ドイツは我々の土地に長い影を落としている。彼らのいわゆる「帝国」は、バルカン半島の問題に幾度となく干渉し、彼らの王や公爵、伯爵は我々の土地を欲しがっている。もうたくさんだ！我々はドイツ人を押し戻し、セルビアが些末なものではないことを彼らに示すべきだ。"
- emp_ser_tame_the_magnates_title:0 "有力者の制御"
+ emp_ser_tame_the_magnates_title:0 "マグナートの制御"
  emp_ser_tame_the_magnates_desc:0 "貴族たちの終わることのない内紛は、ステファン・ドゥシャンの帝国が崩壊した主な原因であった。より強く、より安定した領域を構築するために、我々は貴族を弱体化し、彼らのささいな違いが、もはや国家の健康に影響しない方法を見つける必要がある。"
  emp_ser_retake_macedonia_title:0 "マケドニアの奪還"
  emp_ser_retake_macedonia_desc:0 "セルビアは南部の土地を支配し、エーゲ海へのアクセスも享受してきた。我々の力が日ごとに成長している今、再びかつて我々の土地であったこれらを攻撃し、取り戻す時が来た！"
