--- a/source/localisation/tmm_l_english.yml
+++ b/source/localisation/tmm_l_english.yml
@@ -1617,23 +1617,23 @@
  HAS_ENFORCED_RELIGION_UNTIL:1 "国家改宗を強いられた（$UNTIL|Y$まで）"
  HAS_NOT_ENFORCED_RELIGION:0 "国家改宗を強いられていない"
  HAS_NOT_ENFORCED_RELIGION_UNTIL:0 "国家改宗を強いられていない（$UNTIL|Y$まで）"
- CAROLEAN_NAME:0 "$HOME$第$NUM$カロライン"
- MODIFIER_HAS_CAROLEAN:0 "カロライン歩兵を有効にする"
- MODIFIER_LOCAL_HAS_CAROLEAN:0 "州でカロライン歩兵を有効にする"
- CAROLEAN_CANT_HAVE:0 "あなたの国家はカロラインを召集できません。"
- CAROLEAN_FORCELIMIT:0 "カロライン文化の州の合計開発度が$DEV$であるため、以下の要因により$VAL|%Y$まで§Gカロライン歩兵§!を徴収できます："
- CAROLEAN_LIMIT_CULTURE:0 "$PROVINCE$は$CULTURE$文化の州なので、カロライン歩兵を招集できません。"
- CAROLEAN_DESC:2 "カロラインはスウェーデン帝国におけるスウェーデン人とフィンランド人の歩兵である。農民から徴兵され、厳しい訓練を受けたカロラインは、敵軍に恐怖を呼び起こすことで有名である。\nカロライン連隊は所有する§Yスウェーデン§!と§Yフィン§!文化の州でのみ召集でき、召集可能なユニット数はこの文化の州の開発度に依存する。"
- REGCAT_carolean:0 "カロライン"
- ADD_CAROLEAN_SUB_UNIT_EFFECT:0 "$WHERE|Y$で「§Gカロライン歩兵§!」の$UNIT$を入手します。"
- CAROLEAN_REGIMENT:0 "カロライン連隊\n$EFFECT$"
- HAVE_LESS_CAROLEAN_THAN:0 "$VALUE|Y$未満のカロライン歩兵を持っている。\n"
- HAVE_AT_LEAST_CAROLEAN_THAN:0 "$VALUE|Y$以上のカロライン歩兵を持っている。\n"
- MODIFIER_AMOUNT_OF_CAROLEAN:0 "召集可能なカロライン歩兵"
- MODIFIER_LOCAL_AMOUNT_OF_CAROLEAN:0 "召集可能なカロライン歩兵"
- ONLY_CAROLEAN_MODIFIER:0 "§Yカロライン連隊のみに影響します§!"
+ CAROLEAN_NAME:0 "$HOME$第$NUM$カロリアン"
+ MODIFIER_HAS_CAROLEAN:0 "カロリアン歩兵を有効にする"
+ MODIFIER_LOCAL_HAS_CAROLEAN:0 "州でカロリアン歩兵を有効にする"
+ CAROLEAN_CANT_HAVE:0 "あなたの国家はカロリアンを召集できません。"
+ CAROLEAN_FORCELIMIT:0 "カロリアン文化の州の合計開発度が$DEV$であるため、以下の要因により$VAL|%Y$まで§Gカロリアン歩兵§!を徴収できます："
+ CAROLEAN_LIMIT_CULTURE:0 "$PROVINCE$は$CULTURE$文化の州なので、カロリアン歩兵を招集できません。"
+ CAROLEAN_DESC:2 "カロリアンはスウェーデン帝国におけるスウェーデン人とフィンランド人の歩兵である。農民から徴兵され、厳しい訓練を受けたカロリアンは、敵軍に恐怖を呼び起こすことで有名である。\nカロリアン連隊は所有する§Yスウェーデン§!と§Yフィン§!文化の州でのみ召集でき、召集可能なユニット数はこの文化の州の開発度に依存する。"
+ REGCAT_carolean:0 "カロリアン"
+ ADD_CAROLEAN_SUB_UNIT_EFFECT:0 "$WHERE|Y$で「§Gカロリアン歩兵§!」の$UNIT$を入手します。"
+ CAROLEAN_REGIMENT:0 "カロリアン連隊\n$EFFECT$"
+ HAVE_LESS_CAROLEAN_THAN:0 "$VALUE|Y$未満のカロリアン歩兵を持っている。\n"
+ HAVE_AT_LEAST_CAROLEAN_THAN:0 "$VALUE|Y$以上のカロリアン歩兵を持っている。\n"
+ MODIFIER_AMOUNT_OF_CAROLEAN:0 "召集可能なカロリアン歩兵"
+ MODIFIER_LOCAL_AMOUNT_OF_CAROLEAN:0 "召集可能なカロリアン歩兵"
+ ONLY_CAROLEAN_MODIFIER:0 "§Yカロリアン連隊のみに影響します§!"
  MODIFIER_MORALE_DAMAGE_RECIEVED:0 "被士気ダメージ"
- CAROLEAN_REGIMENT_TYPE:0 "カロライン"
+ CAROLEAN_REGIMENT_TYPE:0 "カロリアン"
  NO_REORGANISE_UNIT_EMBARKED:0 "ユニットがいずれも乗船していないときのみ再編成することができます。"
  TRADE_FAVORS_FOR_HEIR_CANNOT_MAMLUK:0 "§Y$COUNTRY$§!は外国出身の奴隷による政府です。"
  GO_BANKRUPT_EFFECT:0 "$COUNTRY|Y$は破産する"
@@ -1744,3 +1744,13 @@
  COMBAT_OWN_TERRITORY_BONUS:0 "自領内でのダイスロールボーナス。"
  ESTATE_LED_REGENCY_HAS_NOT_INFLUENCE:0 "支配的階級の忠誠心が$VALUE$未満"
  MODIFIER_ALLOW_CLIENT_STATES:0 "§Y衛星国§!の作成が可能"
+ EXPAND_INFRASTRUCTURE_NOT_OWNED:0 "We need to own $WHERE|Y$ before we can expand its infrastructure."
+ REV_GAIN_CB_MONTHS:0 "§Y$ACTIVE$§W gains a §Y$TYPE$§W Casus Belli on §Y$PASSIVE$§W.\nThis Casus Belli will last for §G$LENGTH$§! months.\n"
+ HAVE_LESS_LAND_FORCELIMIT_COUNTRY:1 "Has a land force limit of less than $COUNTRY|Y$ ($AMOUNT|Y$)"
+ HAVE_MORE_LAND_FORCELIMIT_COUNTRY:1 "Has a land force limit at least that of $COUNTRY|Y$ ($AMOUNT|Y$)"
+ HAVE_LESS_NAVAL_FORCELIMIT_COUNTRY:1 "Has a Naval Force Limit of less than $COUNTRY|Y$ ($AMOUNT|Y$)"
+ HAVE_MORE_NAVAL_FORCELIMIT_COUNTRY:1 "Has a Naval Force Limit at least that of $COUNTRY|Y$ ($AMOUNT|Y$)"
+ HAVE_LESS_CITIES_THAN_NO_SUBJECT:0 "Own less than $NUMCITIES|Y$ cities."
+ HAVE_MORE_CITIES_THAN_NO_SUBJECT:0 "Own at least $NUMCITIES|Y$ cities."
+ HAVE_LESS_CITIES_THAN_COMP_NO_SUBJECT:0 "Own less cities than $COUNTRYNAME|Y$ ($NUMCITIES|Y$)."
+ HAVE_MORE_CITIES_THAN_COMP_NO_SUBJECT:0 "Own at least as many cities as $COUNTRYNAME|Y$ ($NUMCITIES|Y$)."
