--- a/source/localisation/powers_and_ideas_l_english.yml
+++ b/source/localisation/powers_and_ideas_l_english.yml
@@ -6714,7 +6714,7 @@
  watchers_of_the_silk_road_desc:0 "我々は建設もしなければ交易もしない。必要なものは奪う…時には必要以上に。我が戦士たちは外国商人とその技術を注意深く監視を続け、今や我々は交易品輸送輸送において最も安全な道を知っている。"
  a_magnanimous_empire:0 "寛大な帝国"
  a_magnanimous_empire_desc:0 "大ハーンの繁栄は、その恐るべき剣だけでなく、賢明にも彼に跪いた者たちへの格別な敬虔さでも知られている。この寛容な帝国を歓迎した者は、帝国の一員として扱われる。"
- theocracy_gov_ideas:0 "神聖のアイデア"
+ theocracy_gov_ideas:0 "神聖アイデア"
  theocracy_gov_ideas_bonus:0 "神聖な情熱"
  servants_of_god:0 "神の僕"
  servants_of_god_desc:0 "この天の機械の歯車となることは、人が本当に負うことができる最大級の名誉の一つだ。自身の神を主とすることは、自国民の心を雷鳴のような賛美で鼓動させる。"
