--- a/source/localisation/common_sense_l_english.yml
+++ b/source/localisation/common_sense_l_english.yml
@@ -761,7 +761,7 @@
  lose_mercantilism:0 "能力主義を推進"
  RANK:0 "ランク"
  GOVERNMENT_EFFECTS_DUE_TO_RANK:0 "§Y$RANK$の政府ランク§!により、この§Y政体§!は以下の効果があります：\n"
- CURRENT_GOVERNMENT_RANK:0 "$COUNTRY_ADJ$の政府は§Y$RANK$§!階級です。"
+ CURRENT_GOVERNMENT_RANK:0 "$COUNTRY_ADJ$政府は§Y$RANK$§!ランクです。"
  CURRENT_GOVERNMENT_RANK_US:0 "我々の政府ランクは§Y$RANK$§!です。"
  CURRENT_GOVERNMENT_RANK_DESC:0 "§Y$RANK1$§!、§Y$RANK2$§!、§Y$RANK3$§!の3つの政府ランクがあります。より上位の政府はボーナスを増やし、ナショナルフォーカス変更までの待機年数を減らします。"
  CULTURAL_UNION_EXPLAIN:0 "\n文化連合は$GOV$になっていることにより：$NAME|Y$グループのすべての文化は受容されています。"
