--- a/source/localisation/leviathan_l_english.yml
+++ b/source/localisation/leviathan_l_english.yml
@@ -609,7 +609,7 @@
  indigenous_treaties_desc:0 "我が言葉は我が絆であり、交わした条約の破棄など考えられない。そのため、敵対関係が終われば我々を信頼してくれる。"
  SETTLE_PROVINCE_NEED:0 "§R定住するには$COST|Y$の$POWER|$力が必要です。§!\n"
  CONFIRM_SETTLE_DESC_COST:0 "$COST|Y$ $POWER$力"
- coptic_blessings:1 "父権的祝福"
+ coptic_blessings:1 "総大司教の祝福"
  zoroastrian_blessings:0 "儀礼"
  zoroastrian.1.t:0 "サンジャンにおけるパールシーの聖域"
  zoroastrian.1.d:0 "長きに渡って自国の問題の処理には、何世代にもわたって[Root.Monarch.GetTitle]の忠実な顧問を務めてきたパルシーに頼ってきました。最近、サンジャンの共同体が、彼らを迫害から保護するよう嘆願を行なっています。"
@@ -1246,7 +1246,7 @@
  estate_regency_events.6.a:0 "一度に一つの問題"
  religious_intolerance_mod:0 "宗教上での不寛容"
  desc_religious_intolerance_mod:0 "国教に従わない者に対する不寛容の新しい波が始まった。"
- religious_intolerance_tooltip:1 "Until §Y[Root.Heir.GetName]§! ascends the throne, other religions in the realm than §Y[Root.Religion.GetName]§! will be persecuted."
+ religious_intolerance_tooltip:1 "§Y[Root.Heir.GetName]§!が王位に就くまで、領内で§Y[Root.Religion.GetName]§!以外の他宗教が迫害される。"
  estate_regency_events.7.t:0 "勤王派の摂政"
  estate_regency_events.7.d:0 "我々は摂政に任じられた者に君主と国家に忠実であることを常に期待するが、職権の濫用、あからさまな不忠、指導的立場になってすぐに権力の掌握を図ろうとすることなどがなければ、それで十分満足できる。[Root.Monarch.GetName]はその例外である。忠実で礼儀を弁えており、我々が[Root.Monarch.GetHerHim]に最高のものを期待している為、摂政の一派からの献策は、この数ヶ月で最高の知らせであった。"
  estate_regency_events.7.a:0 "たまにはいい知らせってのもあるもんなんだな！"
