--- a/source/localisation/EU4_l_english.yml
+++ b/source/localisation/EU4_l_english.yml
@@ -4586,8 +4586,8 @@
  doom:0 "破滅"
  authority:0 "権威"
  PARLIAMENT_DEBATE_UNTIL:0 "議論は少なくとも$DATE|Y$まで継続し、その後毎月、終了する可能性が§Y$CHANCE$%§!あります。\nそれに敗北すると我々は$PRESTIGE|R$の威信を失います。"
- CV_DEV_TOTAL_INFO:7 "我々の州の総開発度は$DEV|Y$であり、以下に基づいています：\n $TAX|Y$の基本税\n $PRODUCTION|Y$の生産\n $MANPOWER|Y$の人的資源\n我々は$PROVS|Y$の州と$HOME|Y$の非海外の中核州を持っています。\n州の平均自治率：$AVERAGEAUTONOMY|%Y$\n非海外州の平均自治率：$AVERAGEHOMEAUTONOMY|%Y$"
- CV_SUB_DEV_TOTAL_INFO:0 "彼らの州の総開発度は$DEV|Y$であり、以下に基づいています：\n $TAX|Y$の基本税\n $PRODUCTION|Y$の生産\n $MANPOWER|Y$の人的資源\n$WHO$は$PROVS|Y$の州と$HOME|Y$の非海外の中核州を持っています。"
+ CV_DEV_TOTAL_INFO:7 "我々の州の総開発度は$DEV|Y$であり、以下に基づいています：\n $TAX|Y$の基本税\n $PRODUCTION|Y$の生産\n $MANPOWER|Y$の人的資源\n我々は$PROVS|Y$州を持ち、うち$HOME|Y$州が非海外の中核州です。\n州の平均自治率：$AVERAGEAUTONOMY|%Y$\n非海外州の平均自治率：$AVERAGEHOMEAUTONOMY|%Y$"
+ CV_SUB_DEV_TOTAL_INFO:0 "彼らの州の総開発度は$DEV|Y$であり、以下に基づいています：\n $TAX|Y$の基本税\n $PRODUCTION|Y$の生産\n $MANPOWER|Y$の人的資源\n$WHO$は$PROVS|Y$州を持ち、うち$HOME|Y$州が非海外の中核州です。"
  AUTHORITY_FROM_DEV:0 "$ADJ$の開発から：$VAL$"
  DOOM_FROM_PROVINCES:0 "領有している州の数：$VAL$"
  DOOM_FROM_REFORMS:0 "\n宗教改革の数：$VAL$"
