--- a/source/localisation/powers_and_ideas_l_english.yml
+++ b/source/localisation/powers_and_ideas_l_english.yml
@@ -99,17 +99,17 @@
  MODIFIER_RELATIONS_DECAY:0 "関係の悪化"
  MODIFIER_RELATIONS_DECAY_OF_ME:0 "時の経過による関係改善"
  IDEA_GROUP_NEEDS:0 "このアイデアグループは、アイデアを獲得するために§Y$POW$§!力が必要です。"
- CHACUL_NOT_OWNING_PROVINCE:0 "あなたが領有していない州の文化を転向することはできません。"
- CHACUL_NOT_CONTROLLING_PROVINCE:0 "あなたが管理していない州の文化を転向することはできません。"
+ CHACUL_NOT_OWNING_PROVINCE:0 "領有していない州の文化を転向することはできません。"
+ CHACUL_NOT_CONTROLLING_PROVINCE:0 "支配していない州の文化を転向することはできません。"
  CHACUL_NOT_CORE:0 "州の文化を変更する前に中核州にしなくてはいけません。"
  CHACUL_ALREADY:0 "$NAME$はすでに§Y$CULTURE$§!の文化です。"
  CHACUL_NOT_RELIGION:0 "$NAME$は§Y$RELIGION$§!の州ではないので文化を転向することができません。まずは宣教師を派遣しましょう。"
- HARSH_NOT_OWNING_PROVINCE:0 "あなたが所有していない州で反乱軍への弾圧処置を行うことはできません。"
- HARSH_NOT_CONTROL_PROVINCE:0 "あなたが管理していない州で反乱軍への弾圧処置を行うことはできません。"
+ HARSH_NOT_OWNING_PROVINCE:0 "領有していない州で反乱軍への弾圧処置を行うことはできません。"
+ HARSH_NOT_CONTROL_PROVINCE:0 "支配していない州で反乱軍への弾圧処置を行うことはできません。"
  HARSH_NO_RR:0 "ここには弾圧すべき反乱軍がいません。"
  NOHTR_NO_POINTS:0 "弾圧処置を行うには§Y$COST$§W£mil£が必要ですが、§Y$VAL$§Wしか持っていません。"
- SORTIES_NOT_OWNING_PROVINCE:0 "所有していない州での出撃はできません。"
- SORTIES_NOT_CONTROLLING_PROVINCE:0 "自国管理外の州から出撃することはできません。"
+ SORTIES_NOT_OWNING_PROVINCE:0 "領有していない州での出撃はできません。"
+ SORTIES_NOT_CONTROLLING_PROVINCE:0 "支配していない州から出撃することはできません。"
  SORTIES_NOT_ENOUGH_GARRISON:0 "守備隊が$GARRISON$人未満の場合、出撃することはできません。"
  SORTIES_REFUSE:0 "守備軍は、敵軍が圧倒的である場合には、駐屯地から離れることを拒否します。"
  SORTIES_NOT_SIEGE:0 "州が包囲されている場合を除き、兵を出撃させることはできません。"
