Save/Update files [ci skip]

--- a/source/localisation/emperor_content_l_english.yml
+++ b/source/localisation/emperor_content_l_english.yml
@@ -2016,7 +2016,7 @@
  pap_sistinechapel_perugino_tt:0 "§Yペルジーノによるシスティーナ礼拝堂の装飾§!が§Y[118.GetName]§!に追加され、以下の効果を得ます：\n年間信仰：§G+0.10§!\n関係の改善：§G+10%§!"
  pap_sistinechapel_michelangelo_tt:0 "§Yミケランジェロによるシスティーナ礼拝堂の装飾§!が§Y[118.GetName]§!に追加され、以下の効果を得ます：\n年間信仰：§G+0.10§!\nアイデアのコスト：§G-5%§!"
  pap_sistinechapel_decorated_tt:0 "§Yシスティーナ礼拝堂の装飾§!が§Y[118.GetName]§!に追加され、以下の効果を得ます：\n年間信仰：§G+0.10§!\n布教強度：§G+1%§!"
- bullion_famine.1.t:0 "金塊大飢饉"
+ bullion_famine.1.t:0 "貴金属飢饉"
  bullion_famine.1.d:1 "我々が東方から絹、ミョウバン、香辛料や真珠などを輸入する際には金を対価としている。そのため東西の交易が増加してくると、ヨーロッパでの金の不足が明らかになってきた。我々の世界では金がますます希少価値の高いものとなってきているが、奢侈品の需要は衰えることを知らない。もしヨーロッパ外で金を入手することができれば、この「大飢饉」に終止符を打てるかもしれない。"
  bullion_famine.1.a:0 "他国よりも先んじて金を探し始めるべきだ。"
  bullion_famine.1.tooltip:0 "一番最初に新たな金鉱を確保できたヨーロッパのキリスト教国家は大きな利益を得ることができるでしょう。"
