--- a/source/localisation/new_missions_l_english.yml
+++ b/source/localisation/new_missions_l_english.yml
@@ -1464,7 +1464,7 @@
  plc_election_mission_tooltip:0 "ポーランドで新しい統治者が選出されました。"
  prussian_confederation_mission_pol_title:0 "プロイセン同盟"
  prussian_confederation_mission_pol_desc:0 "西プロイセンの人々はチュートン騎士団の支配から解放される事を叫ぶ。自由を得るために戦う彼らの支援を行わねばならない。"
- support_confederation_tooltip:0 "プロイセン同盟の支援"
+ support_confederation_tooltip:0 "プロイセン同盟を支援している"
  vassalize_danzig_tooltip:0 "ダンツィヒは我々の従属国になるでしょう"
  vij_zanzibar_tooltip:0 "5州領有せよ：\n§Y東アフリカ§!地方に所属する。\n§Y交易拠点§!がある。\n交易会社によって領有されている。"
  vij_zanzibar_tooltip_2:0 "§Y東アフリカ§!地方の領有州において、その地域内に§Y交易会社倉庫§!もしくは§Y交易会社大倉庫§!の交易会社投資がある。"
