Save/Update files [ci skip]

--- a/source/localisation/triggers_and_effects_l_english.yml
+++ b/source/localisation/triggers_and_effects_l_english.yml
@@ -669,7 +669,7 @@
  TRIGGER_IS_NOT_HIRING_CONDOTTIERE_FROM:0 "$TAG|Y$が$FROM|Y$からコンドッティエーリを借りていない。"
  INSTITUTION_NOT_SPAWNED_YET:0 "$WHICH|Y$は発生していない\n"
  TECH_REQUIRES_INSTITUTION:1 "$INSTITUTION|Y$を受容していない国家では、$TECH|Y$に$PENALTY$の追加コストがかかります。\n"
- TECH_COST:0 "コスト：$VAL$\n"
+ TECH_COST:0 "コスト: $VAL$\n"
  ADD_CAWA_SUB_UNIT_EFFECT:0 "'§Gチェワ§!'$UNIT$を$WHERE|Y$で得る。"
  OPPOSE_REFORM:1 "$REFORM|Y$に反対する。"
  WANTS_REFORM:1 "$REFORM|Y$を支持する。"
