--- a/source/localisation/tmm_l_english.yml
+++ b/source/localisation/tmm_l_english.yml
@@ -1332,9 +1332,9 @@
  MESSAGE_SEARCH_BUTTON_TOOLTIP:0 "指定した単語やフレーズを検索します。"
  MESSAGE_CLEAR_BUTTON_TOOLTIP:0 "検索テキストを消去します。"
  CURIA_APPOINT_CARDINAL_POPE:0 "$COST|Y$¤を払って、支持者の一人を枢機卿に任命します。これにより、汚職$CORRUPTION|R$が発生します。"
- FAVOR_CURRY_FAVORS_MODIFIER_TT:0 "相対的な軍事力からの補正：$VAL|+=%$"
+ FAVOR_CURRY_FAVORS_MODIFIER_TT:0 "相対的な軍事力からの補正: $VAL|+=%$"
  FAVOR_CURRY_FAVORS_TT:0 "おべっかを使っている："
- BASE_MINE_SIZE:0 "鉱山規模：$VAL|G$"
+ BASE_MINE_SIZE:0 "鉱山規模: $VAL|G$"
  MINE_EXPLANATION:0 "鉱山規模に生産規模を乗算して、年間の金生産量を算出します。"
  CONFIRM_LEADER_DESC_CONSORT:0 "本当に配偶者を将軍に任命しますか？\n\nこれは配偶者を危険にさらすかもしれません、また、威信$PRESTIGE|Y$を消費します。"
  CONVERT_CONSORT_IRO:0 "§Y配偶者に軍事指揮権を付与する§!\nこれは、あなたの配偶者を将軍にします。これにより、配偶者はあなたの陸軍を指揮できるようになります。"
@@ -1369,7 +1369,7 @@
  FROM_FEROCITY:0 "獰猛性から：$VALUE|G$"
  PROVINCE_REBELS_SUPPRESSED:0 "この州は$ARMY|Y$によって反乱軍が鎮圧されている。"
  SYNAGOGUE_OF:0 "$COUNTRY$のシナゴーグ"
- SYNAGOGUE_POWER:0 "信仰力：$POWER|Y$"
+ SYNAGOGUE_POWER:0 "信仰力: $POWER|Y$"
  CELEBRATE:0 "祝賀"
  SHOW_FILTERED_ASPECTS:0 "$ADMDIPMIL|Y$$ASPECTS_LONG|Y$の選択"
  CHURCH_POWER_COST:0 "信仰力$COST|Y0$消費する。\n"
@@ -1399,7 +1399,7 @@
  HAVE_MORE_GALLEYS_SHIPS_THAN_NUM:0 "ガレー船が$NUM|Y$以上である"
  HAVE_LESS_TRANSPORTS_THAN_NUM:0 "輸送船が$NUM|Y$未満である"
  HAVE_MORE_TRANSPORTS_THAN_NUM:0 "輸送船が$NUM|Y$以上である"
- FROM_GOLD:0 "金から：$AMOUNT|%R$"
+ FROM_GOLD:0 "金から: $AMOUNT|%R$"
  CAWA_NAME:0 "$HOME$第$NUM$チェワ"
  MODIFIER_AMOUNT_OF_CAWA:0 "召集可能なチェワ"
  MODIFIER_LOCAL_AMOUNT_OF_CAWA:0 "召集可能なチェワ"
@@ -1744,13 +1744,13 @@
  COMBAT_OWN_TERRITORY_BONUS:0 "自領内でのダイスロールボーナス。"
  ESTATE_LED_REGENCY_HAS_NOT_INFLUENCE:0 "支配的階級の忠誠心が$VALUE$未満"
  MODIFIER_ALLOW_CLIENT_STATES:0 "§Y衛星国§!の作成が可能"
- EXPAND_INFRASTRUCTURE_NOT_OWNED:0 "We need to own $WHERE|Y$ before we can expand its infrastructure."
- REV_GAIN_CB_MONTHS:0 "§Y$ACTIVE$§W gains a §Y$TYPE$§W Casus Belli on §Y$PASSIVE$§W.\nThis Casus Belli will last for §G$LENGTH$§! months.\n"
- HAVE_LESS_LAND_FORCELIMIT_COUNTRY:1 "Has a land force limit of less than $COUNTRY|Y$ ($AMOUNT|Y$)"
- HAVE_MORE_LAND_FORCELIMIT_COUNTRY:1 "Has a land force limit at least that of $COUNTRY|Y$ ($AMOUNT|Y$)"
- HAVE_LESS_NAVAL_FORCELIMIT_COUNTRY:1 "Has a Naval Force Limit of less than $COUNTRY|Y$ ($AMOUNT|Y$)"
- HAVE_MORE_NAVAL_FORCELIMIT_COUNTRY:1 "Has a Naval Force Limit at least that of $COUNTRY|Y$ ($AMOUNT|Y$)"
- HAVE_LESS_CITIES_THAN_NO_SUBJECT:0 "Own less than $NUMCITIES|Y$ cities."
- HAVE_MORE_CITIES_THAN_NO_SUBJECT:0 "Own at least $NUMCITIES|Y$ cities."
- HAVE_LESS_CITIES_THAN_COMP_NO_SUBJECT:0 "Own less cities than $COUNTRYNAME|Y$ ($NUMCITIES|Y$)."
- HAVE_MORE_CITIES_THAN_COMP_NO_SUBJECT:0 "Own at least as many cities as $COUNTRYNAME|Y$ ($NUMCITIES|Y$)."
+ EXPAND_INFRASTRUCTURE_NOT_OWNED:0 "そのインフラを拡張するには、まず$WHERE|Y$を領有する必要があります。"
+ REV_GAIN_CB_MONTHS:0 "§Y$ACTIVE$§Wは§Y$PASSIVE$§Wに対して開戦事由§Y$TYPE$§Wを獲得します。\nこの開戦事由は§G$LENGTH$§!ヶ月間利用可能です。\n"
+ HAVE_LESS_LAND_FORCELIMIT_COUNTRY:1 "陸軍扶養限界が$COUNTRY|Y$($AMOUNT|Y$)より少ない。"
+ HAVE_MORE_LAND_FORCELIMIT_COUNTRY:1 "陸軍扶養限界が$COUNTRY|Y$($AMOUNT|Y$)以上である"
+ HAVE_LESS_NAVAL_FORCELIMIT_COUNTRY:1 "海軍扶養限界が$COUNTRY|Y$($AMOUNT|Y$)より少ない"
+ HAVE_MORE_NAVAL_FORCELIMIT_COUNTRY:1 "海軍扶養限界が$COUNTRY|Y$($AMOUNT|Y$)以上である"
+ HAVE_LESS_CITIES_THAN_NO_SUBJECT:0 "都市の領有数が$NUMCITIES|Y$未満である。"
+ HAVE_MORE_CITIES_THAN_NO_SUBJECT:0 "都市の領有数が$NUMCITIES|Y$以上である。"
+ HAVE_LESS_CITIES_THAN_COMP_NO_SUBJECT:0 "都市の領有数が$COUNTRYNAME|Y$($NUMCITIES|Y$)より少ない。"
+ HAVE_MORE_CITIES_THAN_COMP_NO_SUBJECT:0 "都市の領有数が$COUNTRYNAME|Y$($NUMCITIES|Y$)以上である。"
