--- a/source/localisation/new_missions_l_english.yml
+++ b/source/localisation/new_missions_l_english.yml
@@ -485,7 +485,7 @@
  new_world_modernization_desc:0 "ヨーロッパの植民地主義に対して迅速に適応しなければ、自国滅亡の危機である。彼らに挑むための技術と国家機構を持たなければならない。"
  new_world_remove_euro_title:0 "ヨーロッパ人の追放"
  new_world_remove_euro_desc:0 "侵略的なヨーロッパ人は、急速に新世界を征服しており、我々の伝統的な故郷にも拡大している。彼らを船へと追いやる必要がある。"
- new_world_remove_euro_toolip:0 "非ヨーロッパ国家あるいはそれらの植民地が、あなたの首都圏の州を所有している。"
+ new_world_remove_euro_toolip:0 "ヨーロッパ国家あるいはそれらの植民地が、あなたの首都圏の州を所有していない。"
  nw_sunset_invasion_title:0 "日沈む地からの侵略"
  nw_sunset_invasion_desc:0 "侵略者たちは我が国から逃げ出した。しかしそれで十分だろうか？いずれは彼らはより恐ろしい軍隊とともに戻ってくるかもしれない。我々は彼らをヨーロッパへと追跡しよう。"
  gen_eur_trade_node_title:0 "国際的な優勢"
