Save/Update files [ci skip]

--- a/source/localisation/generic_events_l_english.yml
+++ b/source/localisation/generic_events_l_english.yml
@@ -154,7 +154,7 @@
  institution_events.53.t:0 "交易商への譲歩"
  institution_events.53.d:1 "[From.GetAdjective]の港である[trade_company_province.GetName]で活動する商魂たくましい交易商たちは、地元の領主から多大な譲歩を得ることができた。彼らは工場を拡張し、小さな砦を建設して地域の一部を支配下に置いた。この新しい取り決めは、地元の領主が世界の交易網に繋がる機会となるが、[From.Monarch.GetHerHis]の土地へと直接的に拡大するための簡単な言い訳としても使えるだろう…"
  institution_events.53.a:0 "素晴らしい…"
- institution_events.53.a.tt:1 "[From.GetAdjective]の交易力が減少し、我々はその地方の一つで請求権を獲得している。将来、[From.GetUsableName]が我々の交易商を追放することを選択した場合、我々は§Y交易戦争§!の開戦事由を得るかもしれない。"
+ institution_events.53.a.tt:1 "[From.GetAdjective]の交易力が減少し、一地方の請求権を我々は獲得した。将来、[From.GetUsableName]が我々の交易商を追放することを選択した場合、我々は§Y交易戦争§!の開戦事由を得るかもしれない。"
  institution_events.54.t:0 "交易商の不満"
  institution_events.54.d:1 "[From.GetAdjective]の港である[trade_company_province.GetName]で活動する商魂たくましい交易商たちは、地元の領主から多大な譲歩を得ようとした。しかし、彼らの状況の取扱いは外交的と言うには程遠かったようで、地元の領主が彼らと我々双方を非難して終わった。"
  institution_events.54.a:0 "[From.Monarch.GetSheHeCap]は後悔するだろう。"
@@ -1278,7 +1278,7 @@
  EVTOPTB5025:0 "我々の評判を向上させる。"
  EVTNAME5026:0 "疫病！"
  EVTDESC5026:1 "我が国の民は常に疫病の恐怖のもと暮らしている。疫病はしばしば戦争や飢餓よりはるかに致命的だ。恐ろしいことに、天然痘が[plague_province.GetName]を襲っている。流行が過ぎ去るまでに多数の、とりわけ乳幼児の命が奪われることとなるだろう。"
- EVTOPTA5026:0 "我々は何かをしなければならない。"
+ EVTOPTA5026:0 "なんとかしないと！"
  EVTOPTB5026:0 "我々にできることは何もない。"
  EVTNAME5027:0 "陸軍の改革"
  EVTDESC5027:0 "我々の陸軍のより小さな改革のための計画が現在作られている。新しい戦術、武器、指揮は、戦闘効率を改善するために議論されている分野の一部である。"
