--- a/source/localisation/new_missions_l_english.yml
+++ b/source/localisation/new_missions_l_english.yml
@@ -544,7 +544,7 @@
  conquer_athens_desc:0 "アラゴン王家は、現在トルコの猛攻によって危険にさらされているアテネ公国​​への請求権を持っている。アテネ、そして確実にギリシャの人々は、より広範に、我々の保護への復帰から恩恵を受けるだろう。"
  subjugate_ryazan_horde_title:0 "リャザンの従属化"
  subjugate_ryazan_horde_desc:0 "リャザン公国は、もはやその宗主国として、チンギス・カンの後継者を見ていない。彼らは火と剣だけでなく、我々の国家の急速な拡大を通じてそれを思い出さねばならない。"
- tatar_yoke_mission_title:0 "タタールの軛"
+ tatar_yoke_mission_title:0 "タタールのくびき"
  tatar_yoke_mission_desc:0 "愚かなことに、ロシアの君主たちは、我々が過去の遺物であると信じ、長い間、我々への貢物の支払いを停止している。我々は彼らの都市を荒廃させ、女たちを奪い、畑を燃やし、ステップを支配するのが誰であるかを思い出させるだろう。"
  crimean_expansion_horde_title:0 "クリミアの拡張"
  crimean_expansion_horde_desc:0 "クリミアの土地はいくつかの国家に分かれているが、それらは正当にチンギス・カンの後継者に属するものだ。"
