--- a/source/localisation/new_missions_l_english.yml
+++ b/source/localisation/new_missions_l_english.yml
@@ -1440,7 +1440,7 @@
  mongol_china_mission_tooltip:0 "§Y[Root.GetName]§!がモンゴル地方のすべての植民地化された州を所有する。"
  develop_ukraine_1_title:0 "ルテニアの開発"
  develop_ukraine_1_desc:0 "ルテニアは、大きな可能性を秘めた低開発の地域であり、従って、戦争や襲撃の脅威がこれまでにないほど抑えられている。我々は、地域に安定をもたらし、生産性を回復し始めるべきである。"
- lit_religious_unity_title:0 "宗教的解決"
+ lit_religious_unity_title:0 "宗教的和解"
  lit_religious_unity_desc:0 "リトアニアでは宗教問題を解決しなければならない。私たちの臣民の多くは、カトリック教徒の間で宗教改革の機運が高まっていることについて何も言わず、未だに正教会の信仰に従っている。我々が利用できるならどんな方法でも用いて、この問題を解決せねばならない。"
  lit_ukraine_2_title:0 "キエフの復興"
  lit_ukraine_2_desc:0 "キエフはかつて誇り高き街、全てのルーシの首都だった。それ以来、キエフは衰退しており、復興させる必要がある。"
