--- a/source/localisation/womeninhistory_l_english.yml
+++ b/source/localisation/womeninhistory_l_english.yml
@@ -90,7 +90,7 @@
  women_history_events.22.b:0 "彼女を提督として、好きなようにやらせよう。"
  women_history_events.22.c:0 "囚人の解放だけはしよう。"
  women_history_events.23.t:0 "ジュリー・ドービニー"
- women_history_events.23.d:0 "オペラ歌手であるジュリー・ドービニーは、若い時期にダンス、読書、絵画、剣術を学んだ。彼女は剣術の師匠であるセレーヌと共にマルセイユへと逃げ、居酒屋や地元の見本市で剣術の展覧会や歌を歌うことで金を稼いだ。ジュリー・ドービニーはマルセイユのピエール・ゴルティエが運営するオペラ劇場に参加し、若い女性のためにセレーヌと別れた。2人の恋人は修道院に火を放って立ち去った。3ヵ月後、少女は両親の元へ戻り、ドービニーは誘拐、死体売買、放火、裁判前に出頭しなかった過失の罪で起訴された。判決は火あぶりによる処刑であった。\n彼女はパリに戻ると、彼女の古い恋人である、アルマニャック伯爵を尋ね、国王による恩赦と、パリのオペラ座での地位を与えるよう説得した。観客は彼女の美しい声、彼女の演技、彼女の女性的な外観を愛するが、彼女は仲間の俳優や女優の間で多くの友人を得てはいない。女性会員を悩ませていたルイ・ゴーラール・デュメスニーはドービニーによって殴られ、テヴナールと彼女の決闘は伝説的であり、彼女は舞踏会で若い女性にキスした後、彼女に挑戦した3人の貴族を敗北させた。彼女には多くの欠陥があるかもしれないが、彼女は粗削りのダイヤモンドである。我々は彼女と共に何をすべきだろうか？"
+ women_history_events.23.d:0 "オペラ歌手であるジュリー・ドービニーは、幼い頃からダンス、読書、絵画、剣術を学んできた。彼女は剣術の師匠であるセレーヌと共にマルセイユへと逃れ、居酒屋や地元の祭りで剣術を披露したり歌を歌って金を稼いだ。その後、マルセイユのピエール・ゴルティエが運営するオペラ劇場に入り、若い女性を選びセレーヌとは別れた。2人の恋人は修道院に火を放って立ち去ったが3ヵ月後、少女は両親の元へ戻り、誘拐、死体売買、放火、裁判前に出頭しなかった過失の罪で起訴された。判決は火刑であった。\nパリに戻った彼女は、昔の恋人アルマニャック伯爵を訪ね、国王による恩赦と、パリのオペラ座での地位を貰えるよう説得した。彼女の美しい声、演技、中性的な出で立ちは観客に支持されが、同僚の俳優や女優の間では多くの友人に恵まれなかった。ルイ・ゴーラール・デュメスニーは、女性の団員に迫ったためドービニーに殴られ、テヴナールとドービニーの決闘は伝説であり、舞踏会で若い女性にキスした後、挑戦してきた3人の貴族を敗北させた。彼女には多くのひびがあるかもしれないが、粗削りのダイヤモンドである。我々は彼女と共に何をすべきだろうか？"
  women_history_events.23.a:0 "宮廷に彼女を招こう。"
  women_history_events.23.b:0 "彼女を将軍にしよう。"
  women_history_events.23.c:0 "今まで通り歌を歌わせていればいい。"
@@ -337,9 +337,9 @@
  women_history_events.81.a:0 "彼女が孫に権力を与え、顧問として留まる時だ。"
  women_history_events.81.b:0 "彼女は実質的な支配者であり、我々は彼女に正当な価値を与えよう。"
  women_history_events.82.t:0 "アン・ボニー"
- women_history_events.82.d:0 "赤い髪と激しい気性の海賊アン・ボニーは、スループ帆船リヴェンジ号の海賊船長である彼女の二番目の夫「キャリコ・ジャック」ラカムと共に捕らえられた。ボニーとラカムはジョナサン・バレットの兵士たちと激しく戦ったが、乗組員たちはひどく酔っ払って戦うどころではなく、最終的に捕らえられたことで敗北を認めなければならなかった。ラカムは縛り首となったが、ボニーは妊娠のために恩赦を求め、それが与えられた。彼女は息子の誕生から間もなくして解放された。2人はカリブ海域を数ヶ月間悩ませ、より小型の船舶を襲って、豊富な宝物を手に入れた。ボニーは、彼女の船員たちから尊敬を得た戦闘で彼女の能力と有効性を示し、男と共に戦った。これは彼女を提督や顧問にすることにより、我々が利用可能な技能を持つ女性である。"
- women_history_events.82.a:0 "そして、顧問に。"
- women_history_events.82.b:0 "提督だ、彼女への監視を維持するため、誰かが必要ではあるが。"
+ women_history_events.82.d:0 "赤毛で気性が激しい海賊アン・ボニーは、二番目の夫でスループ海賊船リヴェンジ号の船長「キャリコ・ジャック」・ラカムと共に捕らえられた。ボニーとラカムはジョナサン・バレットの兵士たちと激しく戦ったが、乗組員たちはひどく酔っ払って戦うどころではなく、捕らえられたため、彼女も負けを認めなければならなかった。ラカムは縛り首となったが、ボニーは妊娠していたため恩赦を求め、与えられることになった。彼女は息子の誕生から間もなくして釈放された。カリブ海を数ヶ月間悩ませてきた2人は、小さな船を捕らえては豊富な財宝を略奪していた。ボニーは男たちとともに戦い、戦闘において有能さを発揮し、船員たちから尊敬されるようになった。この女性は、提督にするにしろ、顧問にするにしろ、我々に益する能力を持った女性だ。"
+ women_history_events.82.a:0 "ならば、顧問に。"
+ women_history_events.82.b:0 "提督だ、彼女を監視する者が必要ではあるが。"
  women_history_events.83.t:0 "ルクレツィア・ボルジア"
  women_history_events.83.d:0 "女性のうちのいく人かは、彼女らの家族の目から見れば、彼女らが裕福で影響力のある男性と結婚することができるという理由だけの価値しか持っておらず、長年にわたり、彼らの先人たちはそれによってしばしば同盟関係を構築し、影響力を得てさまざまな問題に取り組んできた。ルクレツィア・ボルジアの場合においても、彼女の父親である教皇アレクサンデル6世は、強力な同盟を確保し、確立するため、彼女の生涯を通じて、3人の男性と結婚させた。彼女の最初の夫はペーザロの領主であり、カティニョーラ伯の称号を持つ、ジョヴァンニ・スフォルツァであった。彼は結婚を無効にすることと引き換えにルクレツィアの持参金を与えられ、教皇は床入れが行われていないことを主張し、結婚を解消すべきだと主張した。ボルジア家は非常に強力に成長していたため、もはやスフォルツァは必要なくなり、代わりにより良い同盟が模索された。ジョヴァンニは父親と兄弟への近親相姦でルクレツィアへの訴えを起こしたが、スフォルツァ家の他の人々からの圧力を受け、証人の前で性的不能と婚姻を無効とする文書に署名することを最終的に受け入れた。離婚の後、アルフォンソ・ダラゴーナがルクレツィア・ボルジアと結婚したが、短い結婚生活は、おそらくルクレツィアの兄チェーザレによって、彼が殺害されたときに終わりを告げた。ルクレツィアは夫の死の少し前にスポレートの総督に任命され、彼らにはロドリーゴ・ダラゴーナという名の子供がいた。彼女の三番目で最後の夫はフェラーラ公であったアルフォンソ1世デステであった。ルクレツィアの評判は、彼女の父と兄弟が彼女にもたらした多くの異なる結婚、殺害された夫、離婚、汚点により打撃を受けた。うまくいけば、公爵との結婚で彼女は尊敬され、完成されたルネサンスの公爵夫人として知られるようになるだろう。"
  women_history_events.83.a:0 "彼女の人生は退屈なものではなかった。彼女を宮廷へ連れて来い！"
@@ -349,9 +349,9 @@
  women_history_events.84.a:0 "知的で創造的、まさに我々が必要とするものだ！"
  women_history_events.84.b:0 "彼女は我々を納得させた。彼女が我々を率いるだろう！"
  women_history_events.85.t:0 "メアリ・リード"
- women_history_events.85.d:0 "スループ帆船リヴェンジ号の海賊船長であるジャック・ラカムは、海賊狩りの船長であるジョナサン・バーネットが一斉射撃で船の能力を失わせた時、パーティを開き、ラム酒を飲んでいた。乗組員たちは逃げ出すか、あまりにも酔っ払って戦うどころではなく、メアリ・リードとアン・ボニーだけが残ってバーネットの兵士たちを防いだ。彼らは打ち負かされ、ラカムは降伏した。彼らはすべて逮捕され、海賊行為のため縛り首となった。2人の女性は「妊娠している」と言い、子供たちが生まれるまで一時的に恩赦を与えられた。メアリ・リードは、船乗りの未亡人の私生児として生まれた、彼女がラカムとボニーたちに加わる前の彼女の人生について我々に語った。彼女の母親は死んだ兄弟の祖母から金を受け取るため、彼女を男子であるように偽装し、彼女を「マーク」と呼んだ。十代の若者になると、彼女は最初、陸軍の歩兵として職を見つけ、その後船に雇われた。未だ男装を続けていた彼女はイギリス軍に加わり、戦いを通して自身を証明した。フランドルの兵士と恋に落ちた後、彼らは軍の注文と友人からの贈り物によって宿屋を開いたが、彼らも結婚まで「マーク」が「メアリ」であることに気づかなかった。彼女の夫は若くして亡くなり、リードは再び男装して、兵士として雇われた。しかし戦争はなく、戦場で戦うことも、昇進の機会もなかった。彼女は軍をやめて船に乗り込んだ。その船は海賊によって拿捕され、リードは彼らに加わることを余儀なくされた。王の赦しと私掠船への委託を得て、彼女は反抗の中で海賊に戻った。その後、彼女は海賊船長であるジョン「キャリコ・ジャック」ラカムと彼の仲間であるアン・ボニーに出会った。"
+ women_history_events.85.d:0 "スループ海賊船リヴェンジ号の船長であるキャラコ・ジャック・ラカムは宴を開き、ラム酒を飲んでいたところ、海賊狩りのジョナサン・バーネットが一斉射でリヴェンジ号の能力を喪失させた。乗組員たちは逃げ出すか、あまりにも酔っ払って戦うどころではなかったが、メアリ・リードとアン・ボニーだけが残ってバーネットの兵士たちを防いだ。彼女たちは敗れ、ラカムも降伏し、海賊たちは全員逮捕され、海賊行為により縛り首となった。2人の女性は「妊娠している」と主張し、出産するまで一時的に恩赦が与えられた。メアリ・リードは、ラカムとボニーたちに出会う前の人生について我々に語った。彼女は商船の船長に先立たれた未亡人の私生児として生まれた。彼女の母親は死んだ兄弟の祖母から金を受け取るため、彼女を男子に偽装させ、「マーク」と名乗らせた。十代になると、最初は陸軍で歩兵となったが、その後船に雇われた。未だ男装を続けていた彼女はイギリス軍に加わり、戦いを通して自らの能力を開花させた。フランドルの兵士と恋に落ちた後、彼らは軍からの依頼と友人たちからの贈り物によって宿屋を開いたが、彼らも結婚まで「マーク」が「メアリ」であることに気づかなかった。夫が若くして亡くなり、リードは再び男装して、兵士となった。しかし戦争はなく、戦場で戦うことも、昇進の機会もなかった。彼女は軍をやめて船に乗り込んだが、その船は海賊によって拿捕され、リードは海賊にならざるを得なかった。恩赦と私掠船への配属の後も、反旗を翻し、再び海賊に身を投じた。その後、彼女は海賊船長であるジョン・\"キャリコ・ジャック\"・ラカムと彼の仲間であるアン・ボニーに出会ったのである。"
  women_history_events.85.a:0 "あまりに悪どい彼女は、子供が産まれたら縛り首になるだろう。"
- women_history_events.85.b:0 "彼女を赦し、彼女は我々の海軍提督となるだろう。"
+ women_history_events.85.b:0 "彼女を赦せば、我が海軍の一提督となってくれるだろう。"
  women_history_events.86.t:0 "ムムターズ・マハル"
  women_history_events.86.d:0 "彼女の名はアルジュマンド・バーヌー・ベーグムであったが、彼女の夫で、当時はフッラム王子であったシャー・ジャハーンは、彼は彼女の外見と性格がその時代のすべての女性の中から選ばれたため、ムムターズ・マハル（宮廷の選ばれし者）という称号を彼女に与えた。シャー・ジャハーンが他の二人の妻を無視して、夫婦だけで忠実に子供を養うほどに、彼らの間の愛、親密さ、情熱はとても強かった。詩人たちは彼女の美しさ、恵みと慈悲を賞賛し、宮廷の歴史家は、夫婦が楽しんだ親密な関係を書物にした。ムムターズ・マハルはシャー・ジャハーンの側を決して離れず、$COUNTRY$のどこでも彼と一緒に旅し、彼は彼女を信頼し、彼女に帝国の印であるムール・ウザを与えた。彼女は政治への願望はなかったが、貧しく困窮した者のために頻繁に介入した。13回の妊娠はムムターズ・マハルの身体に大きな打撃を与え、14人目の、最後の子供が彼女の命を奪った。彼女の死に対するシャー・ジャハーンの悲しみは、彼が一年間沈黙して哀悼の意を表し、彼が再び現れた時、彼の髪は白くなっていたほどであった。彼の背中は曲がり、顔は疲れ果て、彼を悲しみから救うことができるのは、彼の長女のジャハーナーラー・ベーグムだけであった。タージ・マハルはシャー・ジャハーンによって計画され、ムムターズ・マハルのための適切な霊廟および葬送の庭園となるよう設計された。"
  women_history_events.86.a:0 "国家は悲しみに打ちひしがれ、我々は永遠にムムターズ・マハルを記憶するだろう。"
