--- a/source/localisation/mare_nostrum_l_english.yml
+++ b/source/localisation/mare_nostrum_l_english.yml
@@ -301,10 +301,10 @@
  corruption_event.18.t:0 "過剰拡大の利用"
  corruption_event.18.d:0 "[Root.GetAdjective]国境の急速な拡大は大きな幸運だが、新しい統治上の課題をもたらす。楽天主義の言葉に精通しているすべての人が知っているように、「挑戦」は「問題」の甘みを持つ言葉である。我が国はまだ新しい広がりに対して完全には調整されておらず、これらの新しい掘り出し物における混乱と、法律の貧弱な施行に気づいた人々は、利益を享受している。\n\nこの無法状態は、最終的には通り過ぎるかもしれないが、一時的な統治は未来のための不安定な基盤を構築したように見える。現在の状況で形成された不信を、我々の社会から取り除くには時と金がかかるだろう。"
  corruption_event.18.a:0 "我々は最善の方法で適応する必要がある。"
- corruption_event.19.t:0 "$TRADER$は腐敗した人脈を持つ"
- corruption_event.19.d:0 "我々は、不正行為なしに統治を続けようとしているが、彼らがどこかで得た友人や人脈について常に責任をもつことはできない。$TRADER$は残念なことに、これから続く問題の良い見本であることが判明し、熟練していて親切ではあるが、$TRADER_POSS_PRONOUN$の仲間の選択においていくぶん騙されやすいようだ。\n\n最近の調査では、我々の交易網の多くが賄賂、密輸、その他の疑わしい活動に頼って現在の効率性を達成していることが明らかになった。$TRADER$はこれについて知らないと主張しているが、それはおそらく本当だろう。それにもかかわらず、我々がこれを公開することで終了することを決断する場合、責任は$TRADER_POSS_PRONOUN$が負うことになる。"
+ corruption_event.19.t:0 "$TRADER$の腐った人脈"
+ corruption_event.19.d:0 "我々は、不正行為なしに統治を続けようとしているが、彼らがどこかで得た友人や人脈について常に責任をもつことはできない。$TRADER$は残念ながら、このような問題を引き起こす良い例であることが判明した。腕が良く、人当たりは良いが、仲間を選ぶ際に多少騙されやすいようだ。\n\n最近の調査では、我々の交易網の多くが賄賂、密輸、その他疑わしい活動に頼って現在の効率性を達成していることが明らかになった。$TRADER$はこれについて知らないと主張しているが、それはおそらく本当だろう。とはいえ、もし我々がこれを暴露して終わらせることになれば、その責任は$TRADER_POSS_PRONOUN$が負うことになるだろう。"
  corruption_event.19.a:0 "嘘を見抜くことができないこともまた失敗だ。"
- corruption_event.19.b:0 "うまくやれば、それはうまくいくだろう。"
+ corruption_event.19.b:0 "うまくいくなら、うまくいくんだろう。"
  corruption_event.20.t:0 "受け入れられつつある賄賂"
  corruption_event.20.d:0 "「正直者と愚か者の違いは何か？愚か者は自分が騙されていることに気が付かない」\n\nそれは、[Root.GetName]においてより一般的な言葉となっている。その精神は、社会的構造のより不吉な変化によって証明されている。賄賂は、何らかの行動が価格を運ぶ市場の自然な結果とみなされ始めている。賄賂を拒否する人は、その言葉が示唆するもの、すなわち完全に愚か者とみなされている。彼らは故意に彼らのものになるかもしれない金を拒否しているため、愚か者よりも悪い。この皮肉な言葉の結果は、どんな形の力も真に腐敗し、それを信じる者は誰も影響を受けない者はないということである。[Root.Monarch.GetTitle]さえも。"
  corruption_event.20.a:0 "それはただの格言だ。"
