Save/Update files [ci skip]

--- a/source/localisation/core_l_english.yml
+++ b/source/localisation/core_l_english.yml
@@ -191,10 +191,10 @@
  SUPPORTED_RELATIONS_NONE:0 "外交関係をもっていない。"
  MAX_RELATIONS:0 "以下により外交関係を$VALUE$持つことができます："
  GUARANTEEING:0 "保証"
- LEADING_UNION:0 "主要な連合"
- LEADING_VASSAL:0 "主要な臣下"
- LEADING_SUBJECTTYPE:0 "主要な$SUBJECTTYPE$"
- LEADING_MARCH:0 "主要な辺境伯"
+ LEADING_UNION:0 "同君連合の上位国"
+ LEADING_VASSAL:0 "属国の宗主国"
+ LEADING_SUBJECTTYPE:0 "$SUBJECTTYPE$の宗主国"
+ LEADING_MARCH:0 "辺境伯の宗主国"
  TRANSFERS_TRADE_POWER:0 "交易力を転送する"
  RECEIVING_TRADE_POWER:0 "からの交易力を受け取る"
  MERCENARY_CANT_BUILD_COLONY:0 "植民地州では傭兵を雇用できません。"
