Save/Update files [ci skip]

--- a/source/localisation/leviathan_l_english.yml
+++ b/source/localisation/leviathan_l_english.yml
@@ -702,8 +702,8 @@
  TAN_ADJ:1 "タイヌイ"
  TAK:1 "ンガティ・カフングヌ"
  TAK_ADJ:1 "ンガティ・カフングヌ"
- TNK:1 "ンガティ・タオ"
- TNK_ADJ:1 "ンガティ・タオ"
+ TNK:1 "ンガティ・トア"
+ TNK_ADJ:1 "ンガティ・トア"
  TEA:1 "ンガティ・ランギヌイ"
  TEA_ADJ:1 "ンガティ・ランギヌイ"
  TTT:0 "ンガプヒ"
